@@ -1,26 +1,27 @@
 /*
  * Copyright (c) Thomas Parker, 2009.
- * 
+ *
  * This program is free software; you can redistribute it and/or modify it under
  * the terms of the GNU Lesser General Public License as published by the Free
  * Software Foundation; either version 2.1 of the License, or (at your option)
  * any later version.
- * 
+ *
  * This program is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
  * FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more
  * details.
- * 
+ *
  * You should have received a copy of the GNU Lesser General Public License
  * along with this library; if not, write to the Free Software Foundation, Inc.,
  * 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA
  */
 package pcgen.cdom.facet.base;
 
-import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.LinkedHashSet;
+import java.util.List;
+import java.util.Objects;
 
 import pcgen.cdom.base.PCGenIdentifier;
 import pcgen.cdom.facet.event.DataFacetChangeEvent;
@@ -31,26 +32,25 @@ import pcgen.cdom.facet.event.DataFacetChangeEvent;
  * more than one of that type of Object (e.g. Language, PCTemplate). This is not
  * used for Objects where the Player Character only possesses one of that type
  * of object (e.g. Race, Deity)
- * 
+ *
  * This class is also used when the source of the Objects in a Player Character
  * do not need to be tracked. If the source needs to be tracked, then
  * AbstractSourcedListFacet should be used.
- * 
+ *
  * null is not a valid object to be stored.
- * 
+ *
  * @param <IDT>
  *            The Type of identifier used in this AbstractListFacet
  * @param <T>
  *            The Type of object stored in this AbstractListFacet
  */
-public abstract class AbstractListFacet<IDT extends PCGenIdentifier, T> extends
-		AbstractDataFacet<IDT, T>
+public abstract class AbstractListFacet<IDT extends PCGenIdentifier, T> extends AbstractDataFacet<IDT, T>
 {
 	/**
 	 * Add the given object to the list of objects stored in this
 	 * AbstractListFacet for the Player Character represented by the given
 	 * PCGenIdentifier
-	 * 
+	 *
 	 * @param id
 	 *            The PCGenIdentifier representing the Player Character for
 	 *            which the given item should be added
@@ -62,10 +62,7 @@ public abstract class AbstractListFacet<IDT extends PCGenIdentifier, T> extends
 	 */
 	public boolean add(IDT id, T obj)
 	{
-		if (obj == null)
-		{
-			throw new IllegalArgumentException("Object to add may not be null");
-		}
+		Objects.requireNonNull(obj, "Object to add may not be null");
 
 		if (getConstructingCachedSet(id).add(obj))
 		{
@@ -82,7 +79,7 @@ public abstract class AbstractListFacet<IDT extends PCGenIdentifier, T> extends
 	 * Adds all of the objects in the given Collection to the list of objects
 	 * stored in this AbstractListFacet for the Player Character represented by
 	 * the given PCGenIdentifier
-	 * 
+	 *
 	 * @param id
 	 *            The PCGenIdentifier representing the Player Character for
 	 *            which the given items should be added
@@ -102,15 +99,10 @@ public abstract class AbstractListFacet<IDT extends PCGenIdentifier, T> extends
 		Collection<T> set = getConstructingCachedSet(id);
 		for (T obj : c)
 		{
-			if (obj == null)
-			{
-				throw new IllegalArgumentException(
-					"Object to add may not be null");
-			}
+			Objects.requireNonNull(obj, "Object to add may not be null");
 			if (set.add(obj))
 			{
-				fireDataFacetChangeEvent(id, obj,
-					DataFacetChangeEvent.DATA_ADDED);
+				fireDataFacetChangeEvent(id, obj, DataFacetChangeEvent.DATA_ADDED);
 			}
 		}
 	}
@@ -119,7 +111,7 @@ public abstract class AbstractListFacet<IDT extends PCGenIdentifier, T> extends
 	 * Removes the given object from the list of objects stored in this
 	 * AbstractListFacet for the Player Character represented by the given
 	 * PCGenIdentifier
-	 * 
+	 *
 	 * @param id
 	 *            The PCGenIdentifier representing the Player Character from
 	 *            which the given item should be removed
@@ -132,17 +124,13 @@ public abstract class AbstractListFacet<IDT extends PCGenIdentifier, T> extends
 	 */
 	public boolean remove(IDT id, T obj)
 	{
-		if (obj == null)
-		{
-			throw new IllegalArgumentException("Object to add may not be null");
-		}
+		Objects.requireNonNull(obj, "Object to add may not be null");
 		Collection<T> componentSet = getCachedSet(id);
 		if (componentSet != null)
 		{
 			if (componentSet.remove(obj))
 			{
-				fireDataFacetChangeEvent(id, obj,
-					DataFacetChangeEvent.DATA_REMOVED);
+				fireDataFacetChangeEvent(id, obj, DataFacetChangeEvent.DATA_REMOVED);
 				if (componentSet.isEmpty())
 				{
 					removeCache(id);
@@ -159,7 +147,7 @@ public abstract class AbstractListFacet<IDT extends PCGenIdentifier, T> extends
 	 * Removes all of the objects in the given Collection from the list of
 	 * objects stored in this AbstractListFacet for the Player Character
 	 * represented by the given PCGenIdentifier
-	 * 
+	 *
 	 * @param id
 	 *            The PCGenIdentifier representing the Player Character from
 	 *            which the given items should be removed
@@ -177,15 +165,10 @@ public abstract class AbstractListFacet<IDT extends PCGenIdentifier, T> extends
 		{
 			for (T obj : c)
 			{
-				if (obj == null)
-				{
-					throw new IllegalArgumentException(
-						"Object to add may not be null");
-				}
+				Objects.requireNonNull(obj, "Object to add may not be null");
 				if (componentSet.remove(obj))
 				{
-					fireDataFacetChangeEvent(id, obj,
-						DataFacetChangeEvent.DATA_REMOVED);
+					fireDataFacetChangeEvent(id, obj, DataFacetChangeEvent.DATA_REMOVED);
 				}
 			}
 		}
@@ -195,7 +178,7 @@ public abstract class AbstractListFacet<IDT extends PCGenIdentifier, T> extends
 	 * Removes all objects from the list of objects stored in this
 	 * AbstractListFacet for the Player Character represented by the given
 	 * PCGenIdentifier
-	 * 
+	 *
 	 * This method is value-semantic in that ownership of the returned
 	 * Collection is transferred to the class calling this method. Since this is
 	 * a remove all function, modification of the returned Collection will not
@@ -205,7 +188,7 @@ public abstract class AbstractListFacet<IDT extends PCGenIdentifier, T> extends
 	 * by this (or other) methods on AbstractListFacet. If you wish to modify
 	 * the information stored in this AbstractListFacet, you must use the add*()
 	 * and remove*() methods of AbstractListFacet.
-	 * 
+	 *
 	 * @param id
 	 *            The PCGenIdentifier representing the Player Character from
 	 *            which all items should be removed
@@ -215,6 +198,7 @@ public abstract class AbstractListFacet<IDT extends PCGenIdentifier, T> extends
 	 */
 	public Collection<T> removeAll(IDT id)
 	{
+		@SuppressWarnings("unchecked")
 		Collection<T> componentSet = (Collection<T>) removeCache(id);
 		if (componentSet == null)
 		{
@@ -232,7 +216,7 @@ public abstract class AbstractListFacet<IDT extends PCGenIdentifier, T> extends
 	 * for the Player Character represented by the given PCGenIdentifier. This
 	 * method returns an empty Set if no objects are in this AbstractListFacet
 	 * for the Player Character identified by the given PCGenIdentifier.
-	 * 
+	 *
 	 * This method is value-semantic in that ownership of the returned List is
 	 * transferred to the class calling this method. Modification of the
 	 * returned List will not modify this AbstractListFacet and modification of
@@ -241,7 +225,7 @@ public abstract class AbstractListFacet<IDT extends PCGenIdentifier, T> extends
 	 * returned by this (or other) methods on AbstractListFacet. If you wish to
 	 * modify the information stored in this AbstractListFacet, you must use the
 	 * add*() and remove*() methods of AbstractListFacet.
-	 * 
+	 *
 	 * @param id
 	 *            The PCGenIdentifier representing the Player Character for
 	 *            which a copy of the items in this AbstractListFacet should be
@@ -256,13 +240,13 @@ public abstract class AbstractListFacet<IDT extends PCGenIdentifier, T> extends
 		{
 			return Collections.emptySet();
 		}
-		return Collections.unmodifiableList(new ArrayList<>(componentSet));
+		return List.copyOf(componentSet);
 	}
 
 	/**
 	 * Returns the count of items in this AbstractListFacet for the Player
 	 * Character represented by the given PCGenIdentifier
-	 * 
+	 *
 	 * @param id
 	 *            The PCGenIdentifier representing the Player Character for
 	 *            which the count of items should be returned
@@ -282,7 +266,7 @@ public abstract class AbstractListFacet<IDT extends PCGenIdentifier, T> extends
 	/**
 	 * Returns true if this AbstractListFacet does not contain any items for the
 	 * Player Character represented by the given PCGenIdentifier
-	 * 
+	 *
 	 * @param id
 	 *            The PCGenIdentifier representing the PlayerCharacter to test
 	 *            if any items are contained by this AbstractListFacet
@@ -293,14 +277,14 @@ public abstract class AbstractListFacet<IDT extends PCGenIdentifier, T> extends
 	public boolean isEmpty(IDT id)
 	{
 		Collection<T> componentSet = getCachedSet(id);
-		return componentSet == null || componentSet.isEmpty();
+		return (componentSet == null) || componentSet.isEmpty();
 	}
 
 	/**
 	 * Returns true if this AbstractListFacet contains the given value in the
 	 * list of items for the Player Character represented by the given
 	 * PCGenIdentifier.
-	 * 
+	 *
 	 * @param id
 	 *            The PCGenIdentifier representing the Player Character used for
 	 *            testing
@@ -318,24 +302,25 @@ public abstract class AbstractListFacet<IDT extends PCGenIdentifier, T> extends
 		 * TODO obj == null? - log an error?
 		 */
 		Collection<T> componentSet = getCachedSet(id);
-		return componentSet != null && componentSet.contains(obj);
+		return (componentSet != null) && componentSet.contains(obj);
 	}
 
 	/**
 	 * Returns the type-safe Set for this AbstractListFacet and the given
 	 * PCGenIdentifier. May return null if no information has been set in this
 	 * AbstractListFacet for the given PCGenIdentifier.
-	 * 
+	 *
 	 * Note that this method SHOULD NOT be public. The Set is owned by
 	 * AbstractListFacet, and since it can be modified, a reference to that
 	 * object should not be exposed to any object other than AbstractListFacet.
-	 * 
+	 *
 	 * @param id
 	 *            The PCGenIdentifier for which the Set should be returned
 	 * @return The Set for the Player Character represented by the given
 	 *         PCGenIdentifier; null if no information has been set in this
 	 *         AbstractListFacet for the Player Character.
 	 */
+	@SuppressWarnings("unchecked")
 	protected Collection<T> getCachedSet(IDT id)
 	{
 		return (Collection<T>) getCache(id);
@@ -346,11 +331,11 @@ public abstract class AbstractListFacet<IDT extends PCGenIdentifier, T> extends
 	 * PCGenIdentifier. Will return a new, empty Set if no information has been
 	 * set in this AbstractListFacet for the given PCGenIdentifier. Will not
 	 * return null.
-	 * 
+	 *
 	 * Note that this method SHOULD NOT be public. The Set object is owned by
 	 * AbstractListFacet, and since it can be modified, a reference to that
 	 * object should not be exposed to any object other than AbstractListFacet.
-	 * 
+	 *
 	 * @param id
 	 *            The PCGenIdentifier for which the Set should be returned
 	 * @return The Set for the Player Character represented by the given
@@ -372,17 +357,17 @@ public abstract class AbstractListFacet<IDT extends PCGenIdentifier, T> extends
 	 * overridden by classes that extend AbstractListFacet if a Collection other
 	 * than an IdentityHashSet is desired for storing the information in the
 	 * AbstractListFacet.
-	 * 
+	 *
 	 * Note that this method SHOULD NOT be public. The Collection object is
 	 * owned by AbstractListFacet, and since it can be modified, a reference to
 	 * that object should not be exposed to any object other than
 	 * AbstractListFacet.
-	 * 
+	 *
 	 * Note that this method should always be the only method used to construct
 	 * a Collection for this AbstractListFacet. It is actually preferred to use
 	 * getConstructingCacheSet(PCGenIdentifier) in order to implicitly call this
 	 * method.
-	 * 
+	 *
 	 * @return A new (empty) Collection for use in this AbstractListFacet.
 	 */
 	protected Collection<T> getComponentSet()
@@ -394,18 +379,18 @@ public abstract class AbstractListFacet<IDT extends PCGenIdentifier, T> extends
 	 * Copies the contents of the AbstractListFacet from one Player Character to
 	 * another Player Character, based on the given PCGenIdentifiers
 	 * representing those Player Characters.
-	 * 
+	 *
 	 * This is a method in AbstractListFacet in order to avoid exposing the
 	 * mutable Collection object to other classes. This should not be inlined,
 	 * as the Collection is internal information to AbstractListFacet and should
 	 * not be exposed to other classes.
-	 * 
+	 *
 	 * Note also the copy is a one-time event and no references are maintained
 	 * between the Player Characters represented by the given PCGenIdentifiers
 	 * (meaning once this copy takes place, any change to the AbstractListFacet
 	 * of one Player Character will only impact the Player Character where the
 	 * AbstractListFacet was changed).
-	 * 
+	 *
 	 * @param source
 	 *            The PCGenIdentifier representing the Player Character from
 	 *            which the information should be copied
@@ -419,8 +404,7 @@ public abstract class AbstractListFacet<IDT extends PCGenIdentifier, T> extends
 		Collection<T> componentSet = getCachedSet(source);
 		if (componentSet != null)
 		{
-			getConstructingCachedSet(copy).addAll(
-				getCopyForNewOwner(componentSet));
+			getConstructingCachedSet(copy).addAll(getCopyForNewOwner(componentSet));
 		}
 	}
 
@@ -429,7 +413,7 @@ public abstract class AbstractListFacet<IDT extends PCGenIdentifier, T> extends
 	 * the same set, but subclasses may need to do deep cloning of their objects
 	 * as part of the copy. Note: The returned collection is directly saved,
 	 * only its contents.
-	 * 
+	 *
 	 * @param componentSet
 	 *            The collection of data held by the facet for a character.
 	 * @return The data ready to be saved to a new collection for a new
@@ -442,19 +426,19 @@ public abstract class AbstractListFacet<IDT extends PCGenIdentifier, T> extends
 
 	/**
 	 * Replaces an item in this AbstractListFacet with another object.
-	 * 
+	 *
 	 * NOTE: Use of this method is HIGHLY DISCOURAGED. Please consider another
 	 * way of achieving the same results as this method. In other words, this
 	 * method was required in order to maintain compatibility with the code in
 	 * PCGen that tends to copy &amp; clone things, but in the future, we are
 	 * attempting to move away from that structure, so use of this method (which
 	 * implies order dependency) is discouraged.
-	 * 
+	 *
 	 * This method is equivalent of a replaceAll in a String. In other words, if
 	 * the underlying Collection stored in this AbstractListFacet is a List (not
 	 * the Set used by default), then this method will replace ALL instances of
 	 * an old object in the List, not just the first instance.
-	 * 
+	 *
 	 * @param id
 	 *            The PCGenIdentifier representing the Player Character from
 	 *            which data will be replaced
@@ -473,7 +457,7 @@ public abstract class AbstractListFacet<IDT extends PCGenIdentifier, T> extends
 	public boolean replace(IDT id, T old, T replacement)
 	{
 		Collection<T> componentSet = getCachedSet(id);
-		if (componentSet == null || !componentSet.contains(old))
+		if ((componentSet == null) || !componentSet.contains(old))
 		{
 			return false;
 		}
@@ -491,8 +475,7 @@ public abstract class AbstractListFacet<IDT extends PCGenIdentifier, T> extends
 		}
 		setCache(id, componentSet);
 		fireDataFacetChangeEvent(id, old, DataFacetChangeEvent.DATA_REMOVED);
-		fireDataFacetChangeEvent(id, replacement,
-			DataFacetChangeEvent.DATA_ADDED);
+		fireDataFacetChangeEvent(id, replacement, DataFacetChangeEvent.DATA_ADDED);
 		return true;
 	}
 
@@ -500,18 +483,18 @@ public abstract class AbstractListFacet<IDT extends PCGenIdentifier, T> extends
 	 * This method will add the given added object within the underlying
 	 * Collection of this AbstractListFacet directly after the given trigger
 	 * object.
-	 * 
+	 *
 	 * If the underlying Collection for this AbstractListFacet is not an ordered
 	 * Collection (e.g. HashSet), then this method is a MUCH slower way of
 	 * calling add(PCGenIdentifier, T).
-	 * 
+	 *
 	 * NOTE: Use of this method is HIGHLY DISCOURAGED. Please consider another
 	 * way of achieving the same results as this method. In other words, this
 	 * method was required in order to maintain compatibility with the code in
 	 * PCGen that tends to copy &amp; clone things, but in the future, we are
 	 * attempting to move away from that structure, so use of this method (which
 	 * implies order dependency) is discouraged.
-	 * 
+	 *
 	 * @param id
 	 *            The PCGenIdentifier representing the Player Character from
 	 *            which data will be replaced
@@ -527,7 +510,7 @@ public abstract class AbstractListFacet<IDT extends PCGenIdentifier, T> extends
 	public void addAfter(IDT id, T trigger, T added)
 	{
 		Collection<T> componentSet = getCachedSet(id);
-		if (componentSet != null && componentSet.contains(trigger))
+		if ((componentSet != null) && componentSet.contains(trigger))
 		{
 			Collection<T> replaceSet = getComponentSet();
 			for (T obj : componentSet)
