@@ -1,5 +1,4 @@
 /*
- * SettingsHandler.java
  * Copyright 2001 (C) Jonas Karlsson
  *
  * This library is free software; you can redistribute it and/or
@@ -15,11 +14,6 @@
  * You should have received a copy of the GNU Lesser General Public
  * License along with this library; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
- *
- * Created on July 10, 2002, 2:15 PM
- *
- * Current Ver: $Revision$
- *
  */
 package pcgen.core;
 
@@ -27,10 +21,9 @@ import java.awt.Color;
 import java.awt.Dimension;
 import java.awt.Frame;
 import java.awt.Point;
+import java.awt.SystemColor;
 import java.io.File;
 import java.io.FileInputStream;
-import java.io.FileNotFoundException;
-import java.io.FileOutputStream;
 import java.io.IOException;
 import java.net.URI;
 import java.net.URISyntaxException;
@@ -41,49 +34,46 @@ import java.util.List;
 import java.util.Map;
 import java.util.Properties;
 import java.util.StringTokenizer;
+
 import javax.swing.SwingConstants;
-import org.apache.commons.lang.SystemUtils;
+
 import pcgen.base.lang.StringUtil;
 import pcgen.cdom.base.Constants;
 import pcgen.cdom.enumeration.SourceFormat;
 import pcgen.core.utils.CoreUtility;
-import pcgen.core.utils.MessageType;
-import pcgen.core.utils.ShowMessageDelegate;
 import pcgen.core.utils.SortedProperties;
 import pcgen.persistence.PersistenceManager;
 import pcgen.system.ConfigurationSettings;
 import pcgen.system.LanguageBundle;
 import pcgen.util.Logging;
 
+import org.apache.commons.lang3.SystemUtils;
+
 /**
- * This class contains all settings-related code moved from Globals.java
  *
  * Should be cleaned up more.
  * 
  * <b>NB: This class is being gradually replaced with use of 
  * {@link pcgen.system.PropertyContext} and its children.</b>   
  *
- * @author jujutsunerd
  **/
 public final class SettingsHandler
 {
-	private static boolean autoFeatsRefundable = false;
 	private static boolean autogenExoticMaterial = false;
 	private static boolean autogenMagic = false;
 	private static boolean autogenMasterwork = false;
 	private static boolean autogenRacial = false;
-	public static boolean validateBonuses = false;
 
 	//
 	// For EqBuilder
 	//
 	private static int maxPotionSpellLevel = Constants.DEFAULT_MAX_POTION_SPELL_LEVEL;
-	private static int maxWandSpellLevel   = Constants.DEFAULT_MAX_WAND_SPELL_LEVEL;
+	private static int maxWandSpellLevel = Constants.DEFAULT_MAX_WAND_SPELL_LEVEL;
 	private static boolean allowMetamagicInCustomizer = false;
 	private static boolean spellMarketPriceAdjusted = false;
 
 	// Map of RuleCheck keys and their settings
-	private static Map<String, String> ruleCheckMap = new HashMap<>();
+	private static final Map<String, String> ruleCheckMap = new HashMap<>();
 
 	/** That browserPath is set to null is intentional. */
 	private static String browserPath = null; //Intentional null
@@ -99,61 +89,40 @@ public final class SettingsHandler
 	private static boolean enforceSpendingBeforeLevelUp = false;
 	private static final Properties FILTERSETTINGS = new Properties();
 	public static GameMode game = new GameMode("default");
-	private static boolean grimHPMode = false;
-	private static boolean grittyACMode = false;
 	private static Dimension kitSelectorDimension = null;
 	private static Point kitSelectorLeftUpperCorner = null;
-	private static boolean useWaitCursor = true;
 	private static boolean loadURLs = false;
 	private static boolean hpMaxAtFirstLevel = true;
 	private static boolean hpMaxAtFirstClassLevel = true;
 	private static boolean hpMaxAtFirstPCClassLevelOnly = true;
 	private static int hpRollMethod = Constants.HP_STANDARD;
-	private static int hpPercent    = Constants.DEFAULT_HP_PERCENT;
+	private static int hpPercent = Constants.DEFAULT_HP_PERCENT;
 	private static boolean ignoreMonsterHDCap = false;
 
 	private static String invalidDmgText;
 	private static String invalidToHitText;
 	private static boolean gearTab_IgnoreCost = false;
 	private static boolean gearTab_AutoResize = false;
-	private static boolean gearTab_AllowDebt  = false;
+	private static boolean gearTab_AllowDebt = false;
 	private static int gearTab_SellRate = Constants.DEFAULT_GEAR_TAB_SELL_RATE;
-	private static int gearTab_BuyRate  = Constants.DEFAULT_GEAR_TAB_BUY_RATE;
-	private static boolean isROG = false;
+	private static int gearTab_BuyRate = Constants.DEFAULT_GEAR_TAB_BUY_RATE;
 	private static Point leftUpperCorner = null;
 	private static int windowState = Frame.NORMAL;
 	private static int looknFeel = 1; // default to Java L&F
-	private static final SortedProperties options = new SortedProperties();
-	private static final Properties filepaths = new Properties();
-	private static final String fileLocation = Globals.getFilepathsPath();
+	private static final SortedProperties OPTIONS = new SortedProperties();
+	private static final Properties FILEPATHS = new Properties();
+	private static final String FILE_LOCATION = Globals.getFilepathsPath();
 	private static File pccFilesLocation = null;
-	private static File pcgPath = new File(Globals.getDefaultPath());
-	private static File lastUsedPcgPath = null; // NB: This is not saved to preferences 
 	private static File backupPcgPath = null;
 	private static boolean createPcgBackup = true;
 	private static File portraitsPath = new File(Globals.getDefaultPath());
-	private static File pcgenSponsorDir =
-		new File(Globals.getDefaultPath()
-			+ File.separator + "system" //$NON-NLS-1$
-			+ File.separator + "sponsors"); //$NON-NLS-1$
 
-	/**
-	 * Where to load the system lst files from.
-	 */
-	private static File pcgenOutputSheetDir =
-		new File(Globals.getDefaultPath()
-			+ File.separator + "outputsheets"); //$NON-NLS-1$
-	private static File gmgenPluginDir =
-		new File(Globals.getDefaultPath()
-			+ File.separator + "plugins"); //$NON-NLS-1$
+	private static File gmgenPluginDir = new File(Globals.getDefaultPath() + File.separator + "plugins"); //$NON-NLS-1$
 	private static int prereqQualifyColor = Constants.DEFAULT_PREREQ_QUALIFY_COLOUR;
-	private static int prereqFailColor    = Constants.DEFAULT_PREREQ_FAIL_COLOUR;
+	private static int prereqFailColor = Constants.DEFAULT_PREREQ_FAIL_COLOUR;
 	private static boolean previewTabShown = false;
-	private static File pcgenPreviewDir =
-		new File(Globals.getDefaultPath()
-			+ File.separator + "preview");//$NON-NLS-1$
 
-/////////////////////////////////////////////////
+	/////////////////////////////////////////////////
 	private static boolean saveCustomInLst = false;
 	private static String selectedCharacterHTMLOutputSheet = ""; //$NON-NLS-1$
 	private static String selectedCharacterPDFOutputSheet = ""; //$NON-NLS-1$
@@ -163,10 +132,8 @@ public final class SettingsHandler
 	private static String selectedPartyPDFOutputSheet = ""; //$NON-NLS-1$
 	private static String selectedEqSetTemplate = ""; //$NON-NLS-1$
 	private static String selectedSpellSheet = ""; //$NON-NLS-1$
-	private static boolean showFeatDialogAtLevelUp = true;
 	private static boolean showHPDialogAtLevelUp = true;
 	private static boolean showStatDialogAtLevelUp = true;
-	private static boolean showToolBar = true;
 	private static boolean showSkillModifier = false;
 	private static boolean showSkillRanks = false;
 	private static boolean showWarningAtFirstLevelUp = true;
@@ -178,8 +145,8 @@ public final class SettingsHandler
 	 *  See @javax.swing.SwingConstants
 	 */
 	private static int tabPlacement = SwingConstants.BOTTOM;
-	private static final String tmpPath = System.getProperty("java.io.tmpdir"); //$NON-NLS-1$
-	private static final File tempPath = new File(getTmpPath());
+	private static final String TMP_PATH = System.getProperty("java.io.tmpdir"); //$NON-NLS-1$
+	private static final File TEMP_PATH = new File(getTmpPath());
 	private static boolean useHigherLevelSlotsDefault = false;
 	private static boolean wantToLoadMasterworkAndMagic = false;
 	private static int nameDisplayStyle = Constants.DISPLAY_STYLE_NAME;
@@ -190,21 +157,11 @@ public final class SettingsHandler
 	private static boolean guiUsesOutputNameEquipment = false;
 	private static boolean guiUsesOutputNameSpells = false;
 	private static int lastTipShown = -1;
-	private static boolean showMemoryArea = false;
-	private static boolean showImagePreview = true;
 	private static boolean showTipOfTheDay = true;
-	private static boolean isGMGen = false;
 	private static boolean showSingleBoxPerBundle = false;
 
-
-	public static String getSelectedGenerators(String string)
+	private SettingsHandler()
 	{
-		throw new UnsupportedOperationException("Not yet implemented");
-	}
-
-	public static void setSelectedGenerators(String prop, String generators)
-	{
-		throw new UnsupportedOperationException("Not yet implemented");
 	}
 
 	public static void setAlwaysOverwrite(final boolean argAlwaysOverwrite)
@@ -285,7 +242,7 @@ public final class SettingsHandler
 	/**
 	 * Sets the path to the backup directory for character files.
 	 *
-	 * @param  path  the <code>File</code> representing the path
+	 * @param  path  the {@code File} representing the path
 	 */
 	public static void setBackupPcgPath(final File path)
 	{
@@ -295,7 +252,7 @@ public final class SettingsHandler
 	/**
 	 * Returns the path to the backup directory for character files.
 	 *
-	 * @return    the <code>backupPcgPath</code> property
+	 * @return    the {@code backupPcgPath} property
 	 */
 	public static File getBackupPcgPath()
 	{
@@ -305,7 +262,7 @@ public final class SettingsHandler
 	/**
 	 * Sets the external browser path to use.
 	 *
-	 * @param  path  the <code>String</code> representing the path
+	 * @param  path  the {@code String} representing the path
 	 **/
 	public static void setBrowserPath(final String path)
 	{
@@ -315,7 +272,7 @@ public final class SettingsHandler
 	/**
 	 * Returns the external browser path to use.
 	 *
-	 * @return    the <code>browserPath</code> property
+	 * @return    the {@code browserPath} property
 	 */
 	public static String getBrowserPath()
 	{
@@ -335,7 +292,7 @@ public final class SettingsHandler
 	/**
 	 * Sets the flag to determine whether PCGen should backup pcg files before saving
 	 *
-	 * @param  argCreatePcgBackup  the <code>flag</code>
+	 * @param  argCreatePcgBackup  the {@code flag}
 	 */
 	public static void setCreatePcgBackup(final boolean argCreatePcgBackup)
 	{
@@ -345,7 +302,7 @@ public final class SettingsHandler
 	/**
 	 * Returns the flag to determine whether PCGen should backup pcg files before saving
 	 *
-	 * @return    the <code>createPcgBackup</code> property
+	 * @return    the {@code createPcgBackup} property
 	 */
 	public static boolean getCreatePcgBackup()
 	{
@@ -407,11 +364,6 @@ public final class SettingsHandler
 		return enforceSpendingBeforeLevelUp;
 	}
 
-	public static void setFilePaths(final String aString)
-	{
-		getFilepathProp().setProperty("pcgen.filepaths", aString); //$NON-NLS-1$
-	}
-
 	public static String getFilePaths()
 	{
 		String def_type = "user";
@@ -419,39 +371,25 @@ public final class SettingsHandler
 		{
 			def_type = "mac_user";
 		}
-		return getFilepathProp().getProperty("pcgen.filepaths", def_type); //$NON-NLS-1$ //$NON-NLS-2$
+		return getFilepathProp().getProperty("pcgen.filepaths", def_type); //$NON-NLS-1$
 	}
 
 	public static Properties getFilepathProp()
 	{
-		return filepaths;
+		return FILEPATHS;
 	}
 
-	public static boolean getFirstRun()
-	{
-		// if filepaths.ini doesn't exist that means this is
-		// the first time PCGen has been run
-		final File aFile = new File(fileLocation);
-
-		return !aFile.exists();
-
-		}
-
-	public static boolean isGMGen()
-	{
-		return isGMGen;
-	}
 
 	/**
-	 * Puts all properties into the <code>Properties</code> object,
-	 * (<code>options</code>). This is called by
-	 * <code>writeOptionsProperties</code>, which then saves the
-	 * <code>options</code> into a file.
+	 * Puts all properties into the {@code Properties} object,
+	 * ({@code options}). This is called by
+	 * {@code writeOptionsProperties}, which then saves the
+	 * {@code options} into a file.
 	 * <p>
 	 * I am guessing that named object properties are faster to access
-	 * than using the <code>getProperty</code> method, and that this is
-	 * why settings are stored as static properties of <code>Global</code>,
-	 * but converted into a <code>Properties</code> object for
+	 * than using the {@code getProperty} method, and that this is
+	 * why settings are stored as static properties of {@code Global},
+	 * but converted into a {@code Properties} object for
 	 * storage and retrieval.
 	 * @param optionName
 	 * @param optionValue
@@ -477,19 +415,19 @@ public final class SettingsHandler
 	}
 
 	/**
-	 * Set most of this objects static properties from the loaded <code>options</code>.
+	 * Set most of this objects static properties from the loaded {@code options}.
 	 * Called by readOptionsProperties. Most of the static properties are
 	 * set as a side effect, with the main screen size being returned.
 	 * <p>
 	 * I am guessing that named object properties are faster to access
-	 * than using the <code>getProperty</code> method, and that this is
-	 * why settings are stored as static properties of <code>Global</code>,
-	 * but converted into a <code>Properties</code> object for
+	 * than using the {@code getProperty} method, and that this is
+	 * why settings are stored as static properties of {@code Global},
+	 * but converted into a {@code Properties} object for
 	 * storage and retrieval.
 	 * @param optionName
 	 * @param defaultValue
 	 *
-	 * @return the default <code>Dimension</code> to set the screen size to
+	 * @return the default {@code Dimension} to set the screen size to
 	 */
 	public static boolean getGMGenOption(final String optionName, final boolean defaultValue)
 	{
@@ -500,12 +438,12 @@ public final class SettingsHandler
 
 	public static int getGMGenOption(final String optionName, final int defaultValue)
 	{
-		return Integer.decode(getGMGenOption(optionName, String.valueOf(defaultValue))).intValue();
+		return Integer.decode(getGMGenOption(optionName, String.valueOf(defaultValue)));
 	}
 
 	public static Double getGMGenOption(final String optionName, final double defaultValue)
 	{
-		return new Double(getGMGenOption(optionName, Double.toString(defaultValue)));
+		return Double.valueOf(getGMGenOption(optionName, Double.toString(defaultValue)));
 	}
 
 	public static String getGMGenOption(final String optionName, final String defaultValue)
@@ -535,17 +473,19 @@ public final class SettingsHandler
 		// new key for game mode specific options are pcgen.options.gameMode.X.optionName
 		// but offer downward compatible support to read in old version for unitSet from 5.8.0
 		String unitSetName = getOptions().getProperty("pcgen.options.gameMode." + key + ".unitSetName",
-				getOptions().getProperty("pcgen.options.unitSetName." + key, game.getDefaultUnitSet()));
-		if  (!game.selectUnitSet(unitSetName))
+			getOptions().getProperty("pcgen.options.unitSetName." + key, game.getDefaultUnitSet()));
+		if (!game.selectUnitSet(unitSetName))
 		{
-			if  (!game.selectDefaultUnitSet())
+			if (!game.selectDefaultUnitSet())
 			{
 				game.selectUnitSet(Constants.STANDARD_UNITSET_NAME);
 			}
 		}
-		game.setDefaultXPTableName(getPCGenOption("gameMode." + key + ".xpTableName", "")); //$NON-NLS-1$ //$NON-NLS-2$
-		game.setDefaultCharacterType(getPCGenOption("gameMode." + key + ".characterType", "")); //$NON-NLS-1$ //$NON-NLS-2$
-		
+		game.setDefaultXPTableName(getPCGenOption(
+			"gameMode." + key + ".xpTableName", "")); //$NON-NLS-1$ //$NON-NLS-2$
+		game.setDefaultCharacterType(getPCGenOption(
+			"gameMode." + key + ".characterType", "")); //$NON-NLS-1$ //$NON-NLS-2$
+
 		AbilityCategory featTemplate = game.getFeatTemplate();
 		if (featTemplate != null)
 		{
@@ -706,6 +646,7 @@ public final class SettingsHandler
 	{
 		return invalidDmgText;
 	}
+
 	/**
 	 * @param string The invalidToHitText to set.
 	 */
@@ -717,15 +658,6 @@ public final class SettingsHandler
 	public static String getInvalidToHitText()
 	{
 		return invalidToHitText;
-	}
-
-	/**
-	 * TODO: It's commented out in gmgen. Is it safe to remove?
-	 * @param GMGen
-	 */
-	public static void setIsGMGen(final boolean GMGen)
-	{
-		isGMGen = GMGen;
 	}
 
 	public static void setKitSelectorDimension(final Dimension d)
@@ -830,10 +762,10 @@ public final class SettingsHandler
 
 	public static SortedProperties getOptions()
 	{
-		return options;
+		return OPTIONS;
 	}
 
-	public static Dimension getOptionsFromProperties(final PlayerCharacter aPC)
+	public static void getOptionsFromProperties(final PlayerCharacter aPC)
 	{
 		Dimension d = new Dimension(0, 0);
 
@@ -849,24 +781,16 @@ public final class SettingsHandler
 		}
 
 		setLeftUpperCorner(new Point(getPCGenOption("windowLeftUpperCorner.X", -1.0).intValue(), //$NON-NLS-1$
-				getPCGenOption("windowLeftUpperCorner.Y", -1.0).intValue())); //$NON-NLS-1$
+			getPCGenOption("windowLeftUpperCorner.Y", -1.0).intValue())); //$NON-NLS-1$
 
-		setWindowState(getPCGenOption("windowState",Frame.NORMAL)); //$NON-NLS-1$
+		setWindowState(getPCGenOption("windowState", Frame.NORMAL)); //$NON-NLS-1$
 
 		Double dw = getPCGenOption("windowWidth", 0.0); //$NON-NLS-1$
 		Double dh = getPCGenOption("windowHeight", 0.0); //$NON-NLS-1$
 
-		if (!CoreUtility.doublesEqual(dw.doubleValue(), 0.0) && !CoreUtility.doublesEqual(dh.doubleValue(), 0.0))
-		{
-			final int width = Integer.parseInt(dw.toString().substring(0,
-						Math.min(dw.toString().length(), dw.toString().lastIndexOf(".")))); //$NON-NLS-1$
-			final int height = Integer.parseInt(dh.toString().substring(0,
-						Math.min(dh.toString().length(), dh.toString().lastIndexOf(".")))); //$NON-NLS-1$
-			d = new Dimension(width, height);
-		}
-
-		setCustomizerLeftUpperCorner(new Point(getPCGenOption("customizer.windowLeftUpperCorner.X", -1.0).intValue(), //$NON-NLS-1$
-				getPCGenOption("customizer.windowLeftUpperCorner.Y", -1.0).intValue())); //$NON-NLS-1$
+		setCustomizerLeftUpperCorner(new Point(getPCGenOption(
+			"customizer.windowLeftUpperCorner.X", -1.0).intValue(), //$NON-NLS-1$
+			getPCGenOption("customizer.windowLeftUpperCorner.Y", -1.0).intValue())); //$NON-NLS-1$
 		dw = getPCGenOption("customizer.windowWidth", 0.0); //$NON-NLS-1$
 		dh = getPCGenOption("customizer.windowHeight", 0.0); //$NON-NLS-1$
 
@@ -875,9 +799,9 @@ public final class SettingsHandler
 			setCustomizerDimension(new Dimension(dw.intValue(), dh.intValue()));
 		}
 
-
-		setKitSelectorLeftUpperCorner(new Point(getPCGenOption("kitSelector.windowLeftUpperCorner.X", -1.0).intValue(), //$NON-NLS-1$
-				getPCGenOption("kitSelector.windowLeftUpperCorner.Y", -1.0).intValue())); //$NON-NLS-1$
+		setKitSelectorLeftUpperCorner(
+			new Point(getPCGenOption("kitSelector.windowLeftUpperCorner.X", -1.0).intValue(), //$NON-NLS-1$
+			getPCGenOption("kitSelector.windowLeftUpperCorner.Y", -1.0).intValue())); //$NON-NLS-1$
 		dw = getPCGenOption("kitSelector.windowWidth", 0.0); //$NON-NLS-1$
 		dh = getPCGenOption("kitSelector.windowHeight", 0.0); //$NON-NLS-1$
 
@@ -885,7 +809,7 @@ public final class SettingsHandler
 		{
 			setKitSelectorDimension(new Dimension(dw.intValue(), dh.intValue()));
 		}
-		
+
 		//
 		// Read in the buy/sell percentages for the gear tab
 		// If not in the .ini file and ignoreCost is set, then use 0%
@@ -908,14 +832,16 @@ public final class SettingsHandler
 			}
 		}
 
-		Globals.initCustColumnWidth(CoreUtility.split(getOptions().getProperty("pcgen.options.custColumnWidth", ""), ',')); //$NON-NLS-1$ //$NON-NLS-2$
+		Globals.initCustColumnWidth(
+			CoreUtility.split(getOptions().getProperty("pcgen.options.custColumnWidth", ""), //$NON-NLS-1$//$NON-NLS-2$
+			','));
 
 		loadURLs = getPCGenOption("loadURLs", false); //$NON-NLS-1$
 
-		Globals.setSourceDisplay(SourceFormat.values()[getPCGenOption("sourceDisplay", SourceFormat.LONG.ordinal())]); //$NON-NLS-1$
+		Globals.setSourceDisplay(
+			SourceFormat.values()[getPCGenOption("sourceDisplay", SourceFormat.LONG.ordinal())]); //$NON-NLS-1$
 
 		setAlwaysOverwrite(getPCGenOption("alwaysOverwrite", false)); //$NON-NLS-1$
-		setAutoFeatsRefundable(getPCGenOption("autoFeatsRefundable", false)); //$NON-NLS-1$
 		setAutogenExoticMaterial(getPCGenOption("autoGenerateExoticMaterial", false)); //$NON-NLS-1$
 		setAutogenMagic(getPCGenOption("autoGenerateMagic", false)); //$NON-NLS-1$
 		setAutogenMasterwork(getPCGenOption("autoGenerateMasterwork", false)); //$NON-NLS-1$
@@ -931,8 +857,6 @@ public final class SettingsHandler
 		setGearTab_BuyRate(buyRate);
 		setGearTab_IgnoreCost(getPCGenOption("GearTab.ignoreCost", false)); //$NON-NLS-1$
 		setGearTab_SellRate(sellRate);
-		setGrimHPMode(getPCGenOption("grimHPMode", false)); //$NON-NLS-1$
-		setGrittyACMode(getPCGenOption("grittyACMode", false)); //$NON-NLS-1$
 		setGUIUsesOutputNameEquipment(getPCGenOption("GUIUsesOutputNameEquipment", false)); //$NON-NLS-1$
 		setGUIUsesOutputNameSpells(getPCGenOption("GUIUsesOutputNameSpells", false)); //$NON-NLS-1$
 		setHideMonsterClasses(getPCGenOption("hideMonsterClasses", false)); //$NON-NLS-1$
@@ -942,52 +866,58 @@ public final class SettingsHandler
 		setHPPercent(getPCGenOption("hpPercent", 100)); //$NON-NLS-1$
 		setHPRollMethod(getPCGenOption("hpRollMethod", Constants.HP_STANDARD)); //$NON-NLS-1$
 		setIgnoreMonsterHDCap(getPCGenOption("ignoreMonsterHDCap", false)); //$NON-NLS-1$
-		setInvalidDmgText(getPCGenOption("invalidDmgText", LanguageBundle.getString("SettingsHandler.114")));  //$NON-NLS-1$//$NON-NLS-2$
-		setInvalidToHitText(getPCGenOption("invalidToHitText", LanguageBundle.getString("SettingsHandler.114")));  //$NON-NLS-1$//$NON-NLS-2$
+		setInvalidDmgText(getPCGenOption("invalidDmgText", //$NON-NLS-1$
+			LanguageBundle.getString("SettingsHandler.114"))); //$NON-NLS-1$
+		setInvalidToHitText(getPCGenOption("invalidToHitText", //$NON-NLS-1$
+			LanguageBundle.getString("SettingsHandler.114"))); //$NON-NLS-1$
 		setLastTipShown(getPCGenOption("lastTipOfTheDayTipShown", -1)); //$NON-NLS-1$
 		setLookAndFeel(getPCGenOption("looknFeel", 1)); //$NON-NLS-1$
 		setMaxPotionSpellLevel(getPCGenOption("maxPotionSpellLevel", 3)); //$NON-NLS-1$
 		setMaxWandSpellLevel(getPCGenOption("maxWandSpellLevel", 4)); //$NON-NLS-1$
 		setMetamagicAllowedInEqBuilder(getPCGenOption("allowMetamagicInCustomizer", false)); //$NON-NLS-1$
 		setPccFilesLocation(new File(expandRelativePath(getPCGenOption("pccFilesLocation", //$NON-NLS-1$
-						System.getProperty("user.dir") + File.separator + "data")))); //$NON-NLS-1$ //$NON-NLS-2$
-		setPcgenOutputSheetDir(new File(expandRelativePath(getOptions().getProperty("pcgen.files.pcgenOutputSheetDir", //$NON-NLS-1$
-						System.getProperty("user.dir") + File.separator + "outputsheets")))); //$NON-NLS-1$ //$NON-NLS-2$
-		setPcgenPreviewDir(new File(expandRelativePath(getOptions().getProperty("pcgen.files.pcgenPreviewDir", //$NON-NLS-1$
-				System.getProperty("user.dir") + File.separator + "preview")))); //$NON-NLS-1$ //$NON-NLS-2$
-		setGmgenPluginDir(new File(expandRelativePath(getOptions().getProperty("gmgen.files.gmgenPluginDir", //$NON-NLS-1$
-						System.getProperty("user.dir") + File.separator + "plugins")))); //$NON-NLS-1$ //$NON-NLS-2$
-		setBackupPcgPath(new File(expandRelativePath(getOptions().getProperty("pcgen.files.characters.backup", "")))); //$NON-NLS-1$
+			System.getProperty("user.dir") + File.separator + "data")))); //$NON-NLS-1$ //$NON-NLS-2$
+		setGmgenPluginDir(
+			new File(expandRelativePath(getOptions().getProperty("gmgen.files.gmgenPluginDir", //$NON-NLS-1$
+			System.getProperty("user.dir") + File.separator + "plugins")))); //$NON-NLS-1$ //$NON-NLS-2$
+		setBackupPcgPath(
+			new File(expandRelativePath(getOptions().getProperty("pcgen.files.characters.backup", "")))); //$NON-NLS-1$
 		setPortraitsPath(new File(expandRelativePath(getOptions().getProperty("pcgen.files.portraits", //$NON-NLS-1$
-						Globals.getDefaultPcgPath()))));
+			Globals.getDefaultPcgPath()))));
 		setPostExportCommandStandard(getPCGenOption("postExportCommandStandard", "")); //$NON-NLS-1$ //$NON-NLS-2$
 		setPostExportCommandPDF(getPCGenOption("postExportCommandPDF", "")); //$NON-NLS-1$ //$NON-NLS-2$
 		setPrereqFailColor(getPCGenOption("prereqFailColor", Color.red.getRGB())); //$NON-NLS-1$
-		setPrereqQualifyColor(getPCGenOption("prereqQualifyColor", Color.black.getRGB())); //$NON-NLS-1$
+		setPrereqQualifyColor(getPCGenOption("prereqQualifyColor", SystemColor.text.getRGB())); //$NON-NLS-1$
 		setPreviewTabShown(getPCGenOption("previewTabShown", true)); //$NON-NLS-1$
-		setROG(getPCGenOption("isROG", false)); //$NON-NLS-1$
 		setSaveCustomInLst(getPCGenOption("saveCustomInLst", false)); //$NON-NLS-1$
 		setSaveOutputSheetWithPC(getPCGenOption("saveOutputSheetWithPC", false)); //$NON-NLS-1$
 		setPrintSpellsWithPC(getPCGenOption("printSpellsWithPC", true)); //$NON-NLS-1$
-		setSelectedSpellSheet(expandRelativePath(getOptions().getProperty("pcgen.files.selectedSpellOutputSheet", ""))); //$NON-NLS-1$ //$NON-NLS-2$
-		setSelectedCharacterHTMLOutputSheet(expandRelativePath(getOptions().getProperty("pcgen.files.selectedCharacterHTMLOutputSheet", //$NON-NLS-1$
-					"")), aPC); //$NON-NLS-1$
-		setSelectedCharacterPDFOutputSheet(expandRelativePath(getOptions().getProperty("pcgen.files.selectedCharacterPDFOutputSheet", //$NON-NLS-1$
-					"")), aPC); //$NON-NLS-1$
-		setSelectedEqSetTemplate(expandRelativePath(getOptions().getProperty("pcgen.files.selectedEqSetTemplate", ""))); //$NON-NLS-1$ //$NON-NLS-2$
-		setSelectedPartyHTMLOutputSheet(expandRelativePath(getOptions().getProperty("pcgen.files.selectedPartyHTMLOutputSheet", //$NON-NLS-1$
-					""))); //$NON-NLS-1$
-		setSelectedPartyPDFOutputSheet(expandRelativePath(getOptions().getProperty("pcgen.files.selectedPartyPDFOutputSheet", //$NON-NLS-1$
-					""))); //$NON-NLS-1$
-		setShowFeatDialogAtLevelUp(getPCGenOption("showFeatDialogAtLevelUp", true)); //$NON-NLS-1$
+		setSelectedSpellSheet(
+			expandRelativePath(
+				getOptions().getProperty("pcgen.files.selectedSpellOutputSheet", ""))); //$NON-NLS-1$ //$NON-NLS-2$
+		setSelectedCharacterHTMLOutputSheet(
+			expandRelativePath(getOptions().getProperty("pcgen.files.selectedCharacterHTMLOutputSheet", //$NON-NLS-1$
+				"")), //$NON-NLS-1$
+			aPC);
+		setSelectedCharacterPDFOutputSheet(
+			expandRelativePath(getOptions().getProperty("pcgen.files.selectedCharacterPDFOutputSheet", //$NON-NLS-1$
+				"")), //$NON-NLS-1$
+			aPC);
+		setSelectedEqSetTemplate(
+			expandRelativePath(
+				getOptions().getProperty("pcgen.files.selectedEqSetTemplate", ""))); //$NON-NLS-1$ //$NON-NLS-2$
+		setSelectedPartyHTMLOutputSheet(
+			expandRelativePath(getOptions().getProperty("pcgen.files.selectedPartyHTMLOutputSheet", //$NON-NLS-1$
+				""))); //$NON-NLS-1$
+		setSelectedPartyPDFOutputSheet(
+			expandRelativePath(getOptions().getProperty("pcgen.files.selectedPartyPDFOutputSheet", //$NON-NLS-1$
+				""))); //$NON-NLS-1$
 		setShowHPDialogAtLevelUp(getPCGenOption("showHPDialogAtLevelUp", true)); //$NON-NLS-1$
-		setShowImagePreview(getPCGenOption("showImagePreview", true)); //$NON-NLS-1$
 		setShowSingleBoxPerBundle(getPCGenOption("showSingleBoxPerBundle", false)); //$NON-NLS-1$
 		setOutputDeprecationMessages(getPCGenOption("outputDeprecationMessages", true));
 		setInputUnconstructedMessages(getPCGenOption("inputUnconstructedMessages", false));
 		setShowStatDialogAtLevelUp(getPCGenOption("showStatDialogAtLevelUp", true)); //$NON-NLS-1$
 		setShowTipOfTheDay(getPCGenOption("showTipOfTheDay", true)); //$NON-NLS-1$
-		setShowToolBar(getPCGenOption("showToolBar", true)); //$NON-NLS-1$
 		setShowSkillModifier(getPCGenOption("showSkillModifier", true)); //$NON-NLS-1$
 		setShowSkillRanks(getPCGenOption("showSkillRanks", true)); //$NON-NLS-1$
 		setShowWarningAtFirstLevelUp(getPCGenOption("showWarningAtFirstLevelUp", true)); //$NON-NLS-1$
@@ -995,57 +925,61 @@ public final class SettingsHandler
 		setSpellMarketPriceAdjusted(getPCGenOption("spellMarketPriceAdjusted", false)); //$NON-NLS-1$
 		setTabPlacement(getOptionTabPlacement("tabPlacement", SwingConstants.BOTTOM)); //$NON-NLS-1$
 		setUseHigherLevelSlotsDefault(getPCGenOption("useHigherLevelSlotsDefault", false)); //$NON-NLS-1$
-		setUseWaitCursor(getPCGenOption("useWaitCursor", true)); //$NON-NLS-1$
 		setWantToLoadMasterworkAndMagic(getPCGenOption("loadMasterworkAndMagicFromLst", false)); //$NON-NLS-1$
-		setWeaponProfPrintout(getPCGenOption("weaponProfPrintout",
-			Constants.DEFAULT_PRINTOUT_WEAPONPROF)); //$NON-NLS-1$
+		setWeaponProfPrintout(getPCGenOption("weaponProfPrintout", Constants.DEFAULT_PRINTOUT_WEAPONPROF));
 
 		// Load up all the RuleCheck stuff from the options.ini file
 		// It's stored as:
 		//   pcgen.options.rulechecks=aKey:Y|bKey:N|cKey:Y
 		parseRuleChecksFromOptions(getPCGenOption("ruleChecks", "")); //$NON-NLS-1$ //$NON-NLS-2$
 
-		return d;
 	}
 
 	/**
 	 * Retreive the chosen campaign files from properties for
 	 * use by the rest of PCGen.
-	 * 
+	 *
 	 * @param gameMode The GameMode to reteieve the files for.
 	 */
 	private static void getChosenCampaignFiles(GameMode gameMode)
 	{
 		List<String> uriStringList =
-				CoreUtility.split(getOptions().getProperty(
-					"pcgen.files.chosenCampaignSourcefiles." + gameMode.getName(), //$NON-NLS-1$
-					""), ',');
+				CoreUtility.split(
+					getOptions().getProperty(
+						"pcgen.files.chosenCampaignSourcefiles." + gameMode.getName(), //$NON-NLS-1$
+				""), ',');
 		List<URI> uriList = new ArrayList<>(uriStringList.size());
 		for (String str : uriStringList)
 		{
-			try {
+			try
+			{
 				uriList.add(new URI(str));
-			} catch (URISyntaxException e) {
-				Logging.errorPrint("Settings error: Unable to convert " + str
-						+ " to a URI: " + e.getLocalizedMessage());
+			}
+			catch (URISyntaxException e)
+			{
+				Logging
+					.errorPrint("Settings error: Unable to convert " + str + " to a URI: " + e.getLocalizedMessage());
 			}
 		}
-		PersistenceManager.getInstance().setChosenCampaignSourcefiles(uriList, gameMode); //$NON-NLS-1$
+		PersistenceManager.getInstance().setChosenCampaignSourcefiles(uriList, gameMode);
 	}
 
 	public static void setOptionsProperties(final PlayerCharacter aPC)
 	{
 		if (getBackupPcgPath() != null && !getBackupPcgPath().getPath().equals(""))
 		{
-			getOptions().setProperty("pcgen.files.characters.backup", retractRelativePath(getBackupPcgPath().getAbsolutePath())); //$NON-NLS-1$
+			getOptions().setProperty("pcgen.files.characters.backup", //$NON-NLS-1$
+				retractRelativePath(getBackupPcgPath().getAbsolutePath()));
 		}
 		else
 		{
 			getOptions().setProperty("pcgen.files.characters.backup", ""); //$NON-NLS-1$
 		}
 
-		getOptions().setProperty("pcgen.files.portraits", retractRelativePath(getPortraitsPath().getAbsolutePath())); //$NON-NLS-1$
-		getOptions().setProperty("pcgen.files.selectedSpellOutputSheet", retractRelativePath(getSelectedSpellSheet())); //$NON-NLS-1$
+		getOptions().setProperty(
+			"pcgen.files.portraits", retractRelativePath(getPortraitsPath().getAbsolutePath())); //$NON-NLS-1$
+		getOptions().setProperty(
+			"pcgen.files.selectedSpellOutputSheet", retractRelativePath(getSelectedSpellSheet())); //$NON-NLS-1$
 		getOptions().setProperty("pcgen.files.selectedCharacterHTMLOutputSheet", //$NON-NLS-1$
 			retractRelativePath(getSelectedCharacterHTMLOutputSheet(aPC)));
 		getOptions().setProperty("pcgen.files.selectedCharacterPDFOutputSheet", //$NON-NLS-1$
@@ -1054,11 +988,13 @@ public final class SettingsHandler
 			retractRelativePath(getSelectedPartyHTMLOutputSheet()));
 		getOptions().setProperty("pcgen.files.selectedPartyPDFOutputSheet", //$NON-NLS-1$
 			retractRelativePath(getSelectedPartyPDFOutputSheet()));
-		getOptions().setProperty("pcgen.files.selectedEqSetTemplate", retractRelativePath(getSelectedEqSetTemplate())); //$NON-NLS-1$
+		getOptions().setProperty(
+			"pcgen.files.selectedEqSetTemplate", retractRelativePath(getSelectedEqSetTemplate())); //$NON-NLS-1$
 		getOptions().setProperty("pcgen.files.chosenCampaignSourcefiles", //$NON-NLS-1$
 			StringUtil.join(PersistenceManager.getInstance().getChosenCampaignSourcefiles(), ", "));
 
-		getOptions().setProperty("pcgen.options.custColumnWidth", StringUtil.join(Globals.getCustColumnWidth(), ", ")); //$NON-NLS-1$
+		getOptions().setProperty(
+			"pcgen.options.custColumnWidth", StringUtil.join(Globals.getCustColumnWidth(), ", ")); //$NON-NLS-1$
 
 		if (getGmgenPluginDir() != null)
 		{
@@ -1099,7 +1035,8 @@ public final class SettingsHandler
 
 		if (getPccFilesLocation() != null)
 		{
-			setPCGenOption("pccFilesLocation", retractRelativePath(getPccFilesLocation().getAbsolutePath())); //$NON-NLS-1$
+			setPCGenOption(
+				"pccFilesLocation", retractRelativePath(getPccFilesLocation().getAbsolutePath())); //$NON-NLS-1$
 		}
 		else
 		{
@@ -1112,7 +1049,7 @@ public final class SettingsHandler
 			setPCGenOption("windowLeftUpperCorner.Y", getLeftUpperCorner().getY()); //$NON-NLS-1$
 		}
 
-		setPCGenOption("windowState",getWindowState()); //$NON-NLS-1$
+		setPCGenOption("windowState", getWindowState()); //$NON-NLS-1$
 
 		if (Globals.getRootFrame() != null)
 		{
@@ -1134,8 +1071,10 @@ public final class SettingsHandler
 
 		if (getKitSelectorLeftUpperCorner() != null)
 		{
-			setPCGenOption("kitSelector.windowLeftUpperCorner.X", getKitSelectorLeftUpperCorner().getX()); //$NON-NLS-1$
-			setPCGenOption("kitSelector.windowLeftUpperCorner.Y", getKitSelectorLeftUpperCorner().getY()); //$NON-NLS-1$
+			setPCGenOption(
+				"kitSelector.windowLeftUpperCorner.X", getKitSelectorLeftUpperCorner().getX()); //$NON-NLS-1$
+			setPCGenOption(
+				"kitSelector.windowLeftUpperCorner.Y", getKitSelectorLeftUpperCorner().getY()); //$NON-NLS-1$
 		}
 
 		if (getKitSelectorDimension() != null)
@@ -1160,9 +1099,12 @@ public final class SettingsHandler
 			{
 				setPCGenOption("gameMode." + gameModeKey + ".unitSetName", gameMode.getUnitSet().getDisplayName());
 			}
-			setPCGenOption("gameMode." + gameModeKey + ".purchaseMethodName", gameMode.getPurchaseModeMethodName()); //$NON-NLS-1$
-			setPCGenOption("gameMode." + gameModeKey + ".rollMethod", gameMode.getRollMethod()); //$NON-NLS-1$
-			setPCGenOption("gameMode." + gameModeKey + ".rollMethodExpression", gameMode.getRollMethodExpressionName()); //$NON-NLS-1$
+			setPCGenOption("gameMode." + gameModeKey + ".purchaseMethodName", //$NON-NLS-1$
+				gameMode.getPurchaseModeMethodName());
+			setPCGenOption("gameMode." + gameModeKey + ".rollMethod", //$NON-NLS-1$
+				gameMode.getRollMethod());
+			setPCGenOption("gameMode." + gameModeKey + ".rollMethodExpression", //$NON-NLS-1$
+				gameMode.getRollMethodExpressionName());
 			setPCGenOption("gameMode." + gameModeKey + ".allStatsValue", gameMode.getAllStatsValue());
 			setPCGenOption("gameMode." + gameModeKey + ".xpTableName", gameMode.getDefaultXPTableName());
 			setPCGenOption("gameMode." + gameModeKey + ".characterType", gameMode.getDefaultCharacterType());
@@ -1172,7 +1114,6 @@ public final class SettingsHandler
 
 		setPCGenOption("allowMetamagicInCustomizer", isMetamagicAllowedInEqBuilder()); //$NON-NLS-1$
 		setPCGenOption("alwaysOverwrite", getAlwaysOverwrite()); //$NON-NLS-1$
-		setPCGenOption("autoFeatsRefundable", isAutoFeatsRefundable()); //$NON-NLS-1$
 		setPCGenOption("autoGenerateExoticMaterial", isAutogenExoticMaterial()); //$NON-NLS-1$
 		setPCGenOption("autoGenerateMagic", isAutogenMagic()); //$NON-NLS-1$
 		setPCGenOption("autoGenerateMasterwork", isAutogenMasterwork()); //$NON-NLS-1$
@@ -1187,8 +1128,6 @@ public final class SettingsHandler
 		setPCGenOption("GearTab.buyRate", getGearTab_BuyRate()); //$NON-NLS-1$
 		setPCGenOption("GearTab.ignoreCost", getGearTab_IgnoreCost()); //$NON-NLS-1$
 		setPCGenOption("GearTab.sellRate", getGearTab_SellRate()); //$NON-NLS-1$
-		setPCGenOption("grimHPMode", isGrimHPMode()); //$NON-NLS-1$
-		setPCGenOption("grittyACMode", isGrittyACMode()); //$NON-NLS-1$
 		setPCGenOption("GUIUsesOutputNameEquipment", guiUsesOutputNameEquipment()); //$NON-NLS-1$
 		setPCGenOption("GUIUsesOutputNameSpells", guiUsesOutputNameSpells()); //$NON-NLS-1$
 		setPCGenOption("hideMonsterClasses", hideMonsterClasses()); //$NON-NLS-1$
@@ -1210,19 +1149,16 @@ public final class SettingsHandler
 		setPCGenOption("postExportCommandStandard", SettingsHandler.getPostExportCommandStandard()); //$NON-NLS-1$
 		setPCGenOption("postExportCommandPDF", SettingsHandler.getPostExportCommandPDF()); //$NON-NLS-1$
 		setPCGenOption("prereqFailColor", "0x" + Integer.toHexString(getPrereqFailColor())); //$NON-NLS-1$ //$NON-NLS-2$
-		setPCGenOption("prereqQualifyColor", "0x" + Integer.toHexString(getPrereqQualifyColor())); //$NON-NLS-1$ //$NON-NLS-2$
+		setPCGenOption("prereqQualifyColor", "0x" //$NON-NLS-1$ //$NON-NLS-2$
+						+ Integer.toHexString(getPrereqQualifyColor()));
 		setPCGenOption("previewTabShown", isPreviewTabShown()); //$NON-NLS-1$
 		setPCGenOption("saveCustomInLst", isSaveCustomInLst()); //$NON-NLS-1$
 		setPCGenOption("saveOutputSheetWithPC", getSaveOutputSheetWithPC()); //$NON-NLS-1$
 		setPCGenOption("printSpellsWithPC", getPrintSpellsWithPC()); //$NON-NLS-1$
-		setPCGenOption("showFeatDialogAtLevelUp", getShowFeatDialogAtLevelUp()); //$NON-NLS-1$
 		setPCGenOption("enforceSpendingBeforeLevelUp", getEnforceSpendingBeforeLevelUp()); //$NON-NLS-1$
 		setPCGenOption("showHPDialogAtLevelUp", getShowHPDialogAtLevelUp()); //$NON-NLS-1$
-		setPCGenOption("showMemoryArea", isShowMemoryArea()); //$NON-NLS-1$
-		setPCGenOption("showImagePreview", isShowImagePreview()); //$NON-NLS-1$
 		setPCGenOption("showStatDialogAtLevelUp", getShowStatDialogAtLevelUp()); //$NON-NLS-1$
 		setPCGenOption("showTipOfTheDay", getShowTipOfTheDay()); //$NON-NLS-1$
-		setPCGenOption("showToolBar", isShowToolBar()); //$NON-NLS-1$
 		setPCGenOption("showSkillModifier", getShowSkillModifier()); //$NON-NLS-1$
 		setPCGenOption("showSkillRanks", getShowSkillRanks()); //$NON-NLS-1$
 		setPCGenOption("showSingleBoxPerBundle", getShowSingleBoxPerBundle()); //$NON-NLS-1$
@@ -1231,8 +1167,6 @@ public final class SettingsHandler
 		setPCGenOption("spellMarketPriceAdjusted", isSpellMarketPriceAdjusted()); //$NON-NLS-1$
 		setPCGenOption("tabPlacement", convertTabPlacementToString(tabPlacement)); //$NON-NLS-1$
 		setPCGenOption("useHigherLevelSlotsDefault", isUseHigherLevelSlotsDefault()); //$NON-NLS-1$
-		setPCGenOption("useWaitCursor", getUseWaitCursor()); //$NON-NLS-1$
-		setPCGenOption("validateBonuses", validateBonuses); //$NON-NLS-1$
 		setPCGenOption("weaponProfPrintout", SettingsHandler.getWeaponProfPrintout()); //$NON-NLS-1$
 		setPCGenOption("outputDeprecationMessages", outputDeprecationMessages()); //$NON-NLS-1$
 		setPCGenOption("inputUnconstructedMessages", inputUnconstructedMessages()); //$NON-NLS-1$
@@ -1245,10 +1179,12 @@ public final class SettingsHandler
 
 	public static void setPCGenOption(final String optionName, final String optionValue)
 	{
-		if (optionValue==null) {
+		if (optionValue == null)
+		{
 			getOptions().remove("pcgen.options." + optionName); //$NON-NLS-1$
 		}
-		else {
+		else
+		{
 			getOptions().setProperty("pcgen.options." + optionName, optionValue); //$NON-NLS-1$
 		}
 	}
@@ -1261,11 +1197,6 @@ public final class SettingsHandler
 	public static String getPCGenOption(final String optionName, final String defaultValue)
 	{
 		return getOptions().getProperty("pcgen.options." + optionName, defaultValue); //$NON-NLS-1$
-	}
-	
-	public static boolean hasPCGenOption(final String optionName)
-	{
-		return getOptions().containsKey("pcgen.options." + optionName);
 	}
 
 	public static String getPDFOutputSheetPath()
@@ -1292,6 +1223,7 @@ public final class SettingsHandler
 	 * @deprecated Use ConfigurationSettings.getPccFilesDir() instead.
 	 * @return pcc files location
 	 */
+	@Deprecated
 	public static File getPccFilesLocation()
 	{
 		return pccFilesLocation;
@@ -1300,7 +1232,7 @@ public final class SettingsHandler
 	/**
 	 * Ensures that the path specified exists.
 	 *
-	 * @param  path  the <code>File</code> representing the path
+	 * @param  path  the {@code File} representing the path
 	 */
 	public static void ensurePathExists(final File path)
 	{
@@ -1311,59 +1243,9 @@ public final class SettingsHandler
 	}
 
 	/**
-	 * Sets the path that was last used in a character or output file chooser.
-	 *
-	 * @param  path  the <code>File</code> representing the path
-	 */
-	public static void setLastUsedPcgPath(final File path)
-	{
-		if (path != null && !path.exists())
-		{
-			path.mkdirs();
-		}
-		lastUsedPcgPath = path;
-	}
-
-	/**
-	 * @return The path that was last used in a character or output file chooser.
-	 */
-	public static File getLastUsedPcgPath()
-	{
-		if (lastUsedPcgPath == null)
-		{
-			return pcgPath;
-		}
-		return lastUsedPcgPath;
-	}
-
-	public static void setPcgenSponsorDir(final File aFile)
-	{
-		pcgenSponsorDir = aFile;
-	}
-
-	/**
-	 * @deprecated 
-	 * @return the sponsor directory
-	 */
-	public static File getPcgenSponsorDir()
-	{
-		return pcgenSponsorDir;
-	}
-
-	public static void setPcgenOutputSheetDir(final File aFile)
-	{
-		pcgenOutputSheetDir = aFile;
-	}
-
-	public static void setPcgenPreviewDir(final File aFile)
-	{
-		pcgenPreviewDir = aFile;
-	}
-
-	/**
 	 * Sets the path to the portrait files.
 	 *
-	 * @param  path  the <code>File</code> representing the path
+	 * @param  path  the {@code File} representing the path
 	 */
 	public static void setPortraitsPath(final File path)
 	{
@@ -1374,6 +1256,7 @@ public final class SettingsHandler
 	 * @deprecated Use PCGenSettings.getPortraitsDir()
 	 * @return the portraits directory
 	 */
+	@Deprecated
 	public static File getPortraitsPath()
 	{
 		return portraitsPath;
@@ -1415,7 +1298,9 @@ public final class SettingsHandler
 
 		if (getPrereqFailColor() != 0)
 		{
-			rString.append("\"#").append(Integer.toHexString(getPrereqFailColor())).append("\""); //$NON-NLS-1$ //$NON-NLS-2$
+	rString.append("\"#") //$NON-NLS-1$
+			.append(Integer.toHexString(getPrereqFailColor()))
+			.append("\""); //$NON-NLS-1$
 		}
 		else
 		{
@@ -1426,6 +1311,7 @@ public final class SettingsHandler
 
 		return rString.toString();
 	}
+
 	public static String getPrereqFailColorAsHtmlEnd()
 	{
 		return "</font>"; //$NON-NLS-1$
@@ -1453,15 +1339,6 @@ public final class SettingsHandler
 	public static boolean getPrintSpellsWithPC()
 	{
 		return printSpellsWithPC;
-	}
-
-	/**
-	 * I guess only ROG can document this?
-	 * @return TRUR if ROG, else FALSE
-	 */
-	public static boolean isROG()
-	{
-		return isROG;
 	}
 
 	/**
@@ -1501,11 +1378,6 @@ public final class SettingsHandler
 		return false;
 	}
 
-	public static void setSaveCustomEquipment(final boolean aBool)
-	{
-		setSaveCustomInLst(aBool);
-	}
-
 	/**
 	 * save the outputsheet location with the PC?
 	 * @param arg
@@ -1539,14 +1411,14 @@ public final class SettingsHandler
 	/**
 	 * Returns the current HTML output sheet for a single character.
 	 *
-	 * @return    the <code>selectedCharacterHTMLOutputSheet</code> property
+	 * @return    the {@code selectedCharacterHTMLOutputSheet} property
 	 * @param aPC
 	 **/
 	public static String getSelectedCharacterHTMLOutputSheet(final PlayerCharacter aPC)
 	{
 		if (getSaveOutputSheetWithPC() && (aPC != null))
 		{
-			if (aPC.getSelectedCharacterHTMLOutputSheet().length() > 0)
+			if (!aPC.getSelectedCharacterHTMLOutputSheet().isEmpty())
 			{
 				return aPC.getSelectedCharacterHTMLOutputSheet();
 			}
@@ -1574,14 +1446,14 @@ public final class SettingsHandler
 	/**
 	 * Returns the current PDF output sheet for a single character.
 	 *
-	 * @return    the <code>selectedCharacterPDFOutputSheet</code> property
+	 * @return    the {@code selectedCharacterPDFOutputSheet} property
 	 * @param aPC
 	 */
 	public static String getSelectedCharacterPDFOutputSheet(final PlayerCharacter aPC)
 	{
 		if (getSaveOutputSheetWithPC() && (aPC != null))
 		{
-			if (aPC.getSelectedCharacterPDFOutputSheet().length() > 0)
+			if (!aPC.getSelectedCharacterPDFOutputSheet().isEmpty())
 			{
 				return aPC.getSelectedCharacterPDFOutputSheet();
 			}
@@ -1603,22 +1475,10 @@ public final class SettingsHandler
 	/**
 	 * Returns the current EquipSet template.
 	 *
-	 * @return    the <code>selectedEqSetTemplate</code> property
+	 * @return    the {@code selectedEqSetTemplate} property
 	 **/
 	public static String getSelectedEqSetTemplate()
 	{
-		return selectedEqSetTemplate;
-	}
-
-	public static String getSelectedEqSetTemplateName()
-	{
-		if (selectedEqSetTemplate.length() > 0)
-		{
-			final int i = selectedEqSetTemplate.lastIndexOf("\\"); //$NON-NLS-1$
-
-			return selectedEqSetTemplate.substring(i + 1);
-		}
-
 		return selectedEqSetTemplate;
 	}
 
@@ -1635,7 +1495,7 @@ public final class SettingsHandler
 	/**
 	 * Returns the current party HTML template.
 	 *
-	 * @return    the <code>selectedPartyHTMLOutputSheet</code> property
+	 * @return    the {@code selectedPartyHTMLOutputSheet} property
 	 **/
 	public static String getSelectedPartyHTMLOutputSheet()
 	{
@@ -1655,7 +1515,7 @@ public final class SettingsHandler
 	/**
 	 * Returns the current party PDF template.
 	 *
-	 * @return    the <code>selectedPartyPDFOutputSheet</code> property
+	 * @return    the {@code selectedPartyPDFOutputSheet} property
 	 **/
 	public static String getSelectedPartyPDFOutputSheet()
 	{
@@ -1675,44 +1535,11 @@ public final class SettingsHandler
 	/**
 	 * Returns the current spell output sheet
 	 *
-	 * @return    the <code>selectedSpellSheet</code> property
+	 * @return    the {@code selectedSpellSheet} property
 	 **/
 	public static String getSelectedSpellSheet()
 	{
 		return selectedSpellSheet;
-	}
-
-	public static String getSelectedSpellSheetName()
-	{
-		if (selectedSpellSheet.length() > 0)
-		{
-			final int i = selectedSpellSheet.lastIndexOf("\\"); //$NON-NLS-1$
-
-			return selectedSpellSheet.substring(i + 1);
-		}
-
-		return selectedSpellSheet;
-	}
-
-	/**
-	 * Sets whether the feats dialog should be shown at level up.
-	 * NOTE: This function has been disabled as it interferes with class builds.
-	 * @see <a href="https://sourceforge.net/tracker/index.php?func=detail&aid=1502512&group_id=25576&atid=384719">#1502512</a>
-	 *  
-	 * @param argShowFeatDialogAtLevelUp Should the feats dialog be shown at level up?
-	 */
-	public static void setShowFeatDialogAtLevelUp(final boolean argShowFeatDialogAtLevelUp)
-	{
-		showFeatDialogAtLevelUp = true; //argShowFeatDialogAtLevelUp;
-	}
-
-	/**
-	 * Returns whether the feats dialog should be shown at level up.
-	 * @return true if the feats dialog should be shown at level up.
-	 */
-	public static boolean getShowFeatDialogAtLevelUp()
-	{
-		return showFeatDialogAtLevelUp;
 	}
 
 	/**
@@ -1802,21 +1629,11 @@ public final class SettingsHandler
 	/**
 	 * Returns the path to the temporary output location (for previews).
 	 *
-	 * @return    the <code>tempPath</code> property
+	 * @return    the {@code tempPath} property
 	 */
 	public static File getTempPath()
 	{
-		return tempPath;
-	}
-
-	public static void setToolBarShown(final boolean argShowToolBar)
-	{
-		setShowToolBar(argShowToolBar);
-	}
-
-	public static boolean isToolBarShown()
-	{
-		return isShowToolBar();
+		return TEMP_PATH;
 	}
 
 	/**
@@ -1830,20 +1647,9 @@ public final class SettingsHandler
 	/**
 	 * @param useHigherLevelSlotsDefault The useHigherLevelSlotsDefault to set.
 	 */
-	public static void setUseHigherLevelSlotsDefault(
-		boolean useHigherLevelSlotsDefault)
+	public static void setUseHigherLevelSlotsDefault(boolean useHigherLevelSlotsDefault)
 	{
 		SettingsHandler.useHigherLevelSlotsDefault = useHigherLevelSlotsDefault;
-	}
-
-	public static void setUseWaitCursor(final boolean b)
-	{
-		useWaitCursor = b;
-	}
-
-	public static boolean getUseWaitCursor()
-	{
-		return useWaitCursor;
 	}
 
 	public static void setWantToLoadMasterworkAndMagic(final boolean bFlag)
@@ -1917,8 +1723,7 @@ public final class SettingsHandler
 			// Not an error, this file may not exist yet
 			if (Logging.isDebugMode())
 			{
-				Logging.debugPrint(LanguageBundle
-					.getString("SettingsHandler.no.options.file")); //$NON-NLS-1$
+				Logging.debugPrint(LanguageBundle.getString("SettingsHandler.no.options.file")); //$NON-NLS-1$
 			}
 		}
 		finally
@@ -1933,7 +1738,8 @@ public final class SettingsHandler
 			catch (IOException ex)
 			{
 				//Not much to do about it...
-				Logging.errorPrint(LanguageBundle.getString("SettingsHandler.can.not.close.options.file"), ex); //$NON-NLS-1$
+				Logging.errorPrint(
+					LanguageBundle.getString("SettingsHandler.can.not.close.options.file"), ex); //$NON-NLS-1$
 			}
 		}
 	}
@@ -1960,164 +1766,9 @@ public final class SettingsHandler
 	private static String getPropertiesFileHeader(final String description)
 	{
 		return "# Emacs, this is -*- java-properties-generic -*- mode."//$NON-NLS-1$
-			+ Constants.LINE_SEPARATOR + "#" //$NON-NLS-2$
-			+ Constants.LINE_SEPARATOR + description //$NON-NLS-1$
-			+ Constants.LINE_SEPARATOR + "# Do not edit this file manually." //$NON-NLS-1$
+			+ Constants.LINE_SEPARATOR + "#" + Constants.LINE_SEPARATOR + description + Constants.LINE_SEPARATOR
+			+ "# Do not edit this file manually." //$NON-NLS-1$
 			+ Constants.LINE_SEPARATOR;
-	}
-
-	/**
-	 * Writes out filepaths.ini
-	 **/
-	public static void writeFilePaths()
-	{
-		final String fType = getFilePaths();
-		final String header = getPropertiesFileHeader(
-				"# filepaths.ini -- location of other .ini files set in pcgen");
-
-		if (!fType.equals("pcgen") && !fType.equals("user") && !fType.equals("mac_user")) //$NON-NLS-1$ //$NON-NLS-2$
-		{
-			if (fType != null)
-			{
-				setFilePaths(fType);
-			}
-		}
-
-		// if it's the users home directory, we need to make sure
-		// that the $HOME/.pcgen directory exists
-		if (fType.equals("user")) //$NON-NLS-1$
-		{
-			final String aLoc = System.getProperty("user.home") + File.separator + ".pcgen"; //$NON-NLS-1$ //$NON-NLS-2$
-			final File aFile = new File(aLoc);
-
-			if (!aFile.exists())
-			{
-				// Directory doesn't exist, so create it
-				aFile.mkdir();
-				Logging.errorPrint(LanguageBundle.getFormattedString("SettingsHandler.dir.does.not.exist", aLoc)); //$NON-NLS-1$
-			}
-			else if (!aFile.isDirectory())
-			{
-				String notDir = LanguageBundle.getFormattedString(
-					"SettingsHandler.is.not.a.directory", aLoc); //$NON-NLS-2$
-				ShowMessageDelegate.showMessageDialog(
-					notDir,
-					Constants.APPLICATION_NAME,
-					MessageType.ERROR);
-			}
-		}
-
-		// if it's the standard Mac user directory, we need to make sure
-		// that the $HOME/Library/Preferences/pcgen directory exists
-		if (fType.equals("mac_user")) //$NON-NLS-1$
-		{
-			final String aLoc = Globals.defaultMacOptionsPath;
-			final File aFile = new File(aLoc);
-
-			if (!aFile.exists())
-			{
-				// Directory doesn't exist, so create it
-				aFile.mkdir();
-				Logging.errorPrint(LanguageBundle.getFormattedString("SettingsHandler.dir.does.not.exist", aLoc)); //$NON-NLS-1$
-			}
-			else if (!aFile.isDirectory())
-			{
-				String notDir = LanguageBundle.getFormattedString(
-					"SettingsHandler.is.not.a.directory", aLoc); //$NON-NLS-2$
-				ShowMessageDelegate.showMessageDialog(
-					notDir,
-					Constants.APPLICATION_NAME,
-					MessageType.ERROR);
-			}
-		}
-
-		FileOutputStream out = null;
-
-		try
-		{
-			out = new FileOutputStream(fileLocation);
-			getFilepathProp().store(out, header);
-		}
-		catch (FileNotFoundException fnfe)
-		{
-			final File f = new File(fileLocation);
-			if (!f.canWrite()) {
-				Logging.errorPrint(LanguageBundle.getFormattedString("SettingsHandler.filepaths.readonly", fileLocation)) ; //$NON-NLS-1$
-			}
-			else {
-				Logging.errorPrint(LanguageBundle.getString("SettingsHandler.filepaths.write"), fnfe); //$NON-NLS-1$
-			}
-		}
-		catch (IOException e)
-		{
-			Logging.errorPrint(LanguageBundle.getString("SettingsHandler.filepaths.write"), e); //$NON-NLS-1$
-		}
-		finally
-		{
-			try
-			{
-				if (out != null)
-				{
-					out.close();
-				}
-			}
-			catch (IOException ex)
-			{
-				// Not much to do about it...
-				Logging.errorPrint(LanguageBundle.getString("SettingsHandler.can.not.close.filepaths.ini.write"), ex); //$NON-NLS-1$
-			}
-		}
-	}
-
-	/**
-	 * Opens (options.ini) for writing and calls {@link SettingsHandler#setOptionsProperties(PlayerCharacter)}.
-	 * @param aPC
-	 */
-	public static void writeOptionsProperties(final PlayerCharacter aPC)
-	{
-		writeFilePaths();
-		writeFilterSettings();
-
-		// Globals.getOptionsPath() will _always_ return a string
-		final String optionsLocation = Globals.getOptionsPath();
-		final String header = getPropertiesFileHeader(
-				"# options.ini -- options set in pcgen");
-
-		// Make sure all the Properties are set
-		setOptionsProperties(aPC);
-
-		FileOutputStream out = null;
-
-		try
-		{
-			out = new FileOutputStream(optionsLocation);
-			getOptions().mystore(out, header);
-		}
-		catch (FileNotFoundException fnfe)
-		{
-			final File f = new File(fileLocation);
-			if (!f.canWrite()) {
-				Logging.errorPrint(LanguageBundle.getFormattedString("SettingsHandler.options.ini.read.only", optionsLocation)); //$NON-NLS-1$
-			}
-			else {
-				Logging.errorPrint(LanguageBundle.getString("SettingsHandler.can.not.write.options.ini"), fnfe); //$NON-NLS-1$
-			}
-		}
-		finally
-		{
-			try
-			{
-				if (out != null)
-				{
-					out.close();
-				}
-			}
-			catch (IOException ex)
-			{
-				// Not much to do about it...
-				Logging.errorPrint(LanguageBundle.getString("SettingsHandler.can.not.close.options.ini.write"), ex); //$NON-NLS-1$
-			}
-		}
 	}
 
 	static boolean isAutogenExoticMaterial()
@@ -2150,22 +1801,6 @@ public final class SettingsHandler
 		return previewTabShown;
 	}
 
-	/** Sets whether 'automatic' class-granted feats can be turned in for other feats
-	 * @param argAutoFeatsRefundable
-	 */
-	private static void setAutoFeatsRefundable(final boolean argAutoFeatsRefundable)
-	{
-		autoFeatsRefundable = argAutoFeatsRefundable;
-	}
-
-	/** Returns whether 'automatic' class-granted feats can be turned in for other feats
-	 *  @return true if 'automatic' class-granted feats can be turned in for other feats
-	 */
-	private static boolean isAutoFeatsRefundable()
-	{
-		return autoFeatsRefundable;
-	}
-
 	private static void setAutogenExoticMaterial(final boolean aBool)
 	{
 		autogenExoticMaterial = aBool;
@@ -2189,26 +1824,6 @@ public final class SettingsHandler
 	private static Properties getFilterSettings()
 	{
 		return FILTERSETTINGS;
-	}
-
-	private static void setGrimHPMode(final boolean argGrimHPMode)
-	{
-		grimHPMode = argGrimHPMode;
-	}
-
-	private static boolean isGrimHPMode()
-	{
-		return grimHPMode;
-	}
-
-	private static void setGrittyACMode(final boolean aBool)
-	{
-		grittyACMode = aBool;
-	}
-
-	private static boolean isGrittyACMode()
-	{
-		return grittyACMode;
 	}
 
 	private static int getOptionTabPlacement(final String optionName, final int defaultValue)
@@ -2262,15 +1877,15 @@ public final class SettingsHandler
 	}
 
 	/**
-	 * Puts all properties into the <code>Properties</code> object,
-	 * (<code>options</code>). This is called by
-	 * <code>writeOptionsProperties</code>, which then saves the
-	 * <code>options</code> into a file.
+	 * Puts all properties into the {@code Properties} object,
+	 * ({@code options}). This is called by
+	 * {@code writeOptionsProperties}, which then saves the
+	 * {@code options} into a file.
 	 * <p>
 	 * I am guessing that named object properties are faster to access
-	 * than using the <code>getProperty</code> method, and that this is
-	 * why settings are stored as static properties of <code>Global</code>,
-	 * but converted into a <code>Properties</code> object for
+	 * than using the {@code getProperty} method, and that this is
+	 * why settings are stored as static properties of {@code Global},
+	 * but converted into a {@code Properties} object for
 	 * storage and retrieval.
 	 * @param optionName
 	 * @param optionValue
@@ -2286,19 +1901,19 @@ public final class SettingsHandler
 	}
 
 	/**
-	 * Set most of this objects static properties from the loaded <code>options</code>.
+	 * Set most of this objects static properties from the loaded {@code options}.
 	 * Called by readOptionsProperties. Most of the static properties are
 	 * set as a side effect, with the main screen size being returned.
 	 * <p>
 	 * I am guessing that named object properties are faster to access
-	 * than using the <code>getProperty</code> method, and that this is
-	 * why settings are stored as static properties of <code>Global</code>,
-	 * but converted into a <code>Properties</code> object for
+	 * than using the {@code getProperty} method, and that this is
+	 * why settings are stored as static properties of {@code Global},
+	 * but converted into a {@code Properties} object for
 	 * storage and retrieval.
 	 * @param optionName
 	 * @param defaultValue
 	 *
-	 * @return the default <code>Dimension</code> to set the screen size to
+	 * @return the default {@code Dimension} to set the screen size to
 	 */
 	public static boolean getPCGenOption(final String optionName, final boolean defaultValue)
 	{
@@ -2309,16 +1924,7 @@ public final class SettingsHandler
 
 	private static Double getPCGenOption(final String optionName, final double defaultValue)
 	{
-		return new Double(getPCGenOption(optionName, Double.toString(defaultValue)));
-	}
-
-	/**
-	 * What does this do???
-	 * @param ROG
-	 */
-	private static void setROG(final boolean ROG)
-	{
-		isROG = ROG;
+		return Double.valueOf(getPCGenOption(optionName, Double.toString(defaultValue)));
 	}
 
 	/**
@@ -2334,7 +1940,7 @@ public final class SettingsHandler
 			final String aKey = i.next();
 			final String aVal = ruleCheckMap.get(aKey);
 
-			if (value.length() == 0)
+			if (value.isEmpty())
 			{
 				value = aKey + "|" + aVal; //$NON-NLS-1$
 			}
@@ -2356,16 +1962,6 @@ public final class SettingsHandler
 	private static boolean isSaveCustomInLst()
 	{
 		return saveCustomInLst;
-	}
-
-	private static void setShowToolBar(final boolean argShowToolBar)
-	{
-		showToolBar = argShowToolBar;
-	}
-
-	private static boolean isShowToolBar()
-	{
-		return showToolBar;
 	}
 
 	public static void setShowSkillModifier(final boolean argShowSkillMod)
@@ -2400,7 +1996,7 @@ public final class SettingsHandler
 
 	private static String getTmpPath()
 	{
-		return tmpPath;
+		return TMP_PATH;
 	}
 
 	private static String convertTabPlacementToString(final int placement)
@@ -2416,7 +2012,8 @@ public final class SettingsHandler
 			case SwingConstants.RIGHT:
 				return "RIGHT"; //$NON-NLS-1$
 
-			case SwingConstants.TOP:default:
+			case SwingConstants.TOP:
+			default:
 				return "TOP"; //$NON-NLS-1$
 		}
 	}
@@ -2468,30 +2065,15 @@ public final class SettingsHandler
 
 		try
 		{
-			in = new FileInputStream(fileLocation);
+			in = new FileInputStream(FILE_LOCATION);
 			getFilepathProp().load(in);
-			String fType = SettingsHandler.getFilePaths();
-
-			if ((fType == null) || (fType.length() < 1))
-			{
-				// make sure we have a default
-				if (SystemUtils.IS_OS_MAC)
-				{
-					fType = "mac_user"; //$NON-NLS-1$
-				}
-				else
-				{
-					fType = "user"; //$NON-NLS-1$
-				}
-			}
 		}
 		catch (IOException e)
 		{
 			// Not an error, this file may not exist yet
 			if (Logging.isDebugMode())
 			{
-				Logging.debugPrint(LanguageBundle
-					.getString("SettingsHandler.will.create.filepaths.ini")); //$NON-NLS-1$
+				Logging.debugPrint(LanguageBundle.getString("SettingsHandler.will.create.filepaths.ini")); //$NON-NLS-1$
 			}
 		}
 		finally
@@ -2506,7 +2088,8 @@ public final class SettingsHandler
 			catch (IOException ex)
 			{
 				//Not much to do about it...
-				Logging.errorPrint(LanguageBundle.getString("SettingsHandler.can.not.close.filepaths.ini"), ex); //$NON-NLS-1$
+				Logging.errorPrint(
+					LanguageBundle.getString("SettingsHandler.can.not.close.filepaths.ini"), ex); //$NON-NLS-1$
 			}
 		}
 	}
@@ -2533,8 +2116,7 @@ public final class SettingsHandler
 			// Not an error, this file may not exist yet
 			if (Logging.isDebugMode())
 			{
-				Logging.debugPrint(LanguageBundle
-					.getString("SettingsHandler.will.create.filter.ini")); //$NON-NLS-1$
+				Logging.debugPrint(LanguageBundle.getString("SettingsHandler.will.create.filter.ini")); //$NON-NLS-1$
 			}
 		}
 		finally
@@ -2549,7 +2131,8 @@ public final class SettingsHandler
 			catch (IOException ex)
 			{
 				//Not much to do about it...
-				Logging.errorPrint(LanguageBundle.getString("SettingsHandler.can.not.close.filter.ini"), ex); //$NON-NLS-1$
+				Logging.errorPrint(
+					LanguageBundle.getString("SettingsHandler.can.not.close.filter.ini"), ex); //$NON-NLS-1$
 			}
 		}
 	}
@@ -2570,67 +2153,8 @@ public final class SettingsHandler
 	}
 
 	/**
-	 * Opens the filter.ini file for writing
-	 *
-	 * <br>author: Thomas Behr 10-03-02
-	 */
-	private static void writeFilterSettings()
-	{
-		// Globals.getFilterPath() will _always_ return a string
-		final String filterLocation = Globals.getFilterPath();
-		final String header = getPropertiesFileHeader(
-				"# filter.ini -- filters set in pcgen");
-
-		FileOutputStream out = null;
-
-		try
-		{
-			out = new FileOutputStream(filterLocation);
-			getFilterSettings().store(out, header);
-		}
-		catch (FileNotFoundException fnfe)
-		{
-			final File f = new File(fileLocation);
-			if (!f.canWrite()) {
-				Logging.errorPrint(LanguageBundle.getFormattedString("SettingsHandler.filter.ini.readonly", filterLocation)); //$NON-NLS-1$
-			}
-			else {
-				Logging.errorPrint(LanguageBundle.getString("SettingsHandler.can.not.write.filter.ini"), fnfe); //$NON-NLS-1$
-			}
-		}
-		catch (IOException e)
-		{
-			Logging.errorPrint(LanguageBundle.getString("SettingsHandler.can.not.write.filter.ini"), e); //$NON-NLS-1$
-		}
-		finally
-		{
-			try
-			{
-				if (out != null)
-				{
-					out.close();
-				}
-			}
-			catch (IOException ex)
-			{
-				//Not much to do about it...
-				Logging.errorPrint(LanguageBundle.getString("SettingsHandler.can.not.close.filter.ini.write"), ex); //$NON-NLS-1$
-			}
-		}
-
-		// remove old filter stuff!
-		for (Iterator<Object> it = getOptions().keySet().iterator(); it.hasNext();)
-		{
-			if (((String) it.next()).startsWith("pcgen.filters.")) //$NON-NLS-1$
-			{
-				it.remove();
-			}
-		}
-	}
-
-	/**
 	 * <p>Returns the window state.  This corresponds to the values returned/accepted
-	 * by <code>Frame.getExtendedState</code> and <code>Frame.setExtendedState</code>.</p>
+	 * by {@code Frame.getExtendedState} and {@code Frame.setExtendedState}.</p>
 	 *
 	 * @return Returns the windowState.
 	 */
@@ -2641,43 +2165,13 @@ public final class SettingsHandler
 
 	/**
 	 * <p>Sets the window state.  This corresponds to the values returned/accepted
-	 * by <code>Frame.getExtendedState</code> and <code>Frame.setExtendedState</code>.</p>
+	 * by {@code Frame.getExtendedState} and {@code Frame.setExtendedState}.</p>
 	 *
 	 * @param argWindowState The argWindowState to set.
 	 */
 	public static void setWindowState(final int argWindowState)
 	{
 		SettingsHandler.windowState = argWindowState;
-	}
-
-	/**
-	 * Shows the program memory use in the status bar if <code>true</code>.
-	 *
-	 * @return show memory setting for the status bar
-	 */
-	public static boolean isShowMemoryArea()
-	{
-		return showMemoryArea;
-	}
-
-	/**
-	 * Shows character portrait preview in the file chooser if <code>true</code>.
-	 *
-	 * @return show portrait preview
-	 */
-	public static boolean isShowImagePreview()
-	{
-		return showImagePreview;
-	}
-
-	/**
-	 * Toggles displaying the character portrait preview in the file chooser
-	 *
-	 * @param showImagePreview <code>true</code> to show portrait preview
-	 */
-	public static void setShowImagePreview(final boolean showImagePreview)
-	{
-		SettingsHandler.showImagePreview = showImagePreview;
 	}
 
 	/**
@@ -2699,7 +2193,7 @@ public final class SettingsHandler
 	}
 
 	private static boolean outputDeprecationMessages = true;
-	
+
 	public static boolean outputDeprecationMessages()
 	{
 		return outputDeprecationMessages;
@@ -2711,7 +2205,7 @@ public final class SettingsHandler
 	}
 
 	private static boolean inputUnconstructedMessages = true;
-	
+
 	public static boolean inputUnconstructedMessages()
 	{
 		return inputUnconstructedMessages;
