@@ -1,5 +1,4 @@
 /*
- * PrerequisiteWriterFactory.java
  *
  * Copyright 2004 (C) Frugal <frugal@purplewombat.co.uk>
  *
@@ -17,9 +16,7 @@
  * License along with this library; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
  *
- * Created on 18-Dec-2003
  *
- * Current Ver: $Revision$
  *
  *
  *
@@ -40,8 +37,7 @@ import pcgen.util.Logging;
 public final class PrerequisiteWriterFactory implements PluginLoader
 {
 	private static PrerequisiteWriterFactory instance = null;
-	private static Map<String, PrerequisiteWriterInterface> parserLookup =
-            new HashMap<>();
+	private Map<String, PrerequisiteWriterInterface> parserLookup = new HashMap<>();
 
 	private PrerequisiteWriterFactory()
 	{
@@ -76,20 +72,19 @@ public final class PrerequisiteWriterFactory implements PluginLoader
 			test = parserLookup.get(kind.toLowerCase());
 			if (test == null)
 			{
-				Logging.errorPrintLocalised(
-					"PrerequisiteTestFactory.error.cannot_find_test", kind); //$NON-NLS-1$
+				Logging.errorPrintLocalised("PrerequisiteTestFactory.error.cannot_find_test", kind); //$NON-NLS-1$
 			}
 		}
 		return test;
 	}
 
 	/**
-	 * Register the test class with the factory 
-	 * @param testClass
-	 * @throws PersistenceLayerException
+	 * Register the test class with the factory .
+	 *
+	 * @param testClass the test class
+	 * @throws PersistenceLayerException the persistence layer exception
 	 */
-	public static void register(PrerequisiteWriterInterface testClass)
-		throws PersistenceLayerException
+	public void register(PrerequisiteWriterInterface testClass) throws PersistenceLayerException
 	{
 		String kindHandled = testClass.kindHandled();
 
@@ -97,25 +92,31 @@ public final class PrerequisiteWriterFactory implements PluginLoader
 
 		if (test != null)
 		{
-			throw new PersistenceLayerException("Error registering '"
-				+ testClass.getClass().getName() + "' as test '" + kindHandled
-				+ "'. The test is already registered to '"
-				+ test.getClass().getName() + "'");
+			throw new PersistenceLayerException("Error registering '" + testClass.getClass().getName() + "' as test '"
+				+ kindHandled + "'. The test is already registered to '" + test.getClass().getName() + "'");
 		}
 
 		parserLookup.put(kindHandled.toLowerCase(), testClass);
 	}
 
-    @Override
-	public void loadPlugin(Class<?> clazz) throws PersistenceLayerException, InstantiationException, IllegalAccessException, NoSuchMethodException, InvocationTargetException
-    {
-		register((PrerequisiteWriterInterface) clazz.getConstructor()
-				.newInstance());
-}
+	@Override
+	public void loadPlugin(Class<?> clazz) throws PersistenceLayerException, InstantiationException,
+		IllegalAccessException, NoSuchMethodException, InvocationTargetException
+	{
+		register((PrerequisiteWriterInterface) clazz.getConstructor().newInstance());
+	}
 
-    @Override
+	@Override
 	public Class[] getPluginClasses()
 	{
 		return new Class[]{PrerequisiteWriterInterface.class};
+	}
+	
+	public static void clear()
+	{
+		if (instance != null)
+		{
+			instance.parserLookup.clear();
+		}
 	}
 }
