@@ -18,22 +18,24 @@
 package plugin.lsttokens.testsupport;
 
 
+import static org.junit.jupiter.api.Assertions.assertArrayEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.fail;
+
+import java.lang.reflect.InvocationTargetException;
 import java.net.URI;
 import java.net.URISyntaxException;
 
-import junit.framework.TestCase;
-
-import org.junit.Before;
-import org.junit.BeforeClass;
-import org.junit.Test;
-
+import pcgen.cdom.base.Categorized;
+import pcgen.cdom.base.Category;
 import pcgen.cdom.base.Loadable;
-import pcgen.core.AbilityCategory;
 import pcgen.core.Campaign;
 import pcgen.core.bonus.BonusObj;
 import pcgen.persistence.PersistenceLayerException;
 import pcgen.persistence.lst.CampaignSourceEntry;
-import pcgen.persistence.lst.LstToken;
 import pcgen.rules.context.ConsolidatedListCommitStrategy;
 import pcgen.rules.context.LoadContext;
 import pcgen.rules.context.RuntimeLoadContext;
@@ -44,46 +46,43 @@ import pcgen.rules.persistence.token.CDOMPrimaryToken;
 import pcgen.rules.persistence.token.ParseResult;
 import pcgen.util.Logging;
 
-public abstract class AbstractKitTokenTestCase<T extends Loadable> extends TestCase
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import util.TestURI;
+
+public abstract class AbstractKitTokenTestCase<T extends Loadable>
 {
 	protected LoadContext primaryContext;
 	protected LoadContext secondaryContext;
 	protected T primaryProf;
 	protected T secondaryProf;
-	protected int expectedPrimaryMessageCount = 0;
+	private int expectedPrimaryMessageCount = 0;
 
-	private static boolean classSetUpFired = false;
 	protected static CampaignSourceEntry testCampaign;
 
-	@BeforeClass
-	public static void classSetUp() throws URISyntaxException
+	@BeforeAll
+	public static void classSetUp()
 	{
-		testCampaign = new CampaignSourceEntry(new Campaign(), new URI(
-				"file:/Test%20Case"));
-		classSetUpFired = true;
+		testCampaign = new CampaignSourceEntry(new Campaign(), TestURI.getURI());
 	}
 
-	@Override
-	@Before
+	@BeforeEach
 	public void setUp() throws PersistenceLayerException, URISyntaxException
 	{
-		if (!classSetUpFired)
-		{
-			classSetUp();
-		}
 		// Yea, this causes warnings...
 		TokenRegistration.register(getToken());
-		primaryContext = new RuntimeLoadContext(new RuntimeReferenceContext(),
+		primaryContext = new RuntimeLoadContext(RuntimeReferenceContext.createRuntimeReferenceContext(),
 				new ConsolidatedListCommitStrategy());
-		secondaryContext = new RuntimeLoadContext(new RuntimeReferenceContext(),
+		secondaryContext = new RuntimeLoadContext(RuntimeReferenceContext.createRuntimeReferenceContext(),
 				new ConsolidatedListCommitStrategy());
 		URI testURI = testCampaign.getURI();
 		primaryContext.setSourceURI(testURI);
 		primaryContext.setExtractURI(testURI);
 		secondaryContext.setSourceURI(testURI);
 		secondaryContext.setExtractURI(testURI);
-		primaryContext.getReferenceContext().importObject(AbilityCategory.FEAT);
-		secondaryContext.getReferenceContext().importObject(AbilityCategory.FEAT);
+		primaryContext.getReferenceContext().importObject(BuildUtilities.getFeatCat());
+		secondaryContext.getReferenceContext().importObject(BuildUtilities.getFeatCat());
 		primaryProf = getSubInstance();
 		secondaryProf = getSubInstance();
 		expectedPrimaryMessageCount = 0;
@@ -93,24 +92,18 @@ public abstract class AbstractKitTokenTestCase<T extends Loadable> extends TestC
 	{
 		try
 		{
-			return getCDOMClass().newInstance();
+			return getCDOMClass().getConstructor().newInstance();
 		}
-		catch (InstantiationException e)
+		catch (InstantiationException
+				| IllegalAccessException
+				| NoSuchMethodException
+				| InvocationTargetException e)
 		{
-			throw new InternalError(e.getMessage());
-		}
-		catch (IllegalAccessException e)
-		{
-			throw new InternalError(e.getMessage());
+			throw new RuntimeException(e);
 		}
 	}
 
 	public abstract Class<? extends T> getCDOMClass();
-
-	public static void addToken(LstToken tok)
-	{
-		TokenLibrary.addToTokenMap(tok);
-	}
 
 	public static void addBonus(Class<? extends BonusObj> clazz)
 	{
@@ -118,11 +111,7 @@ public abstract class AbstractKitTokenTestCase<T extends Loadable> extends TestC
 		{
 			TokenLibrary.addBonusClass(clazz);
 		}
-		catch (InstantiationException e)
-		{
-			e.printStackTrace();
-		}
-		catch (IllegalAccessException e)
+		catch (InstantiationException | IllegalAccessException e)
 		{
 			e.printStackTrace();
 		}
@@ -139,16 +128,7 @@ public abstract class AbstractKitTokenTestCase<T extends Loadable> extends TestC
 			assertTrue(parse(s));
 		}
 		String[] unparsed = getToken().unparse(primaryContext, primaryProf);
-
-		assertNotNull(str);
-		assertNotNull(unparsed);
-		assertEquals(str.length, unparsed.length);
-
-		for (int i = 0; i < str.length; i++)
-		{
-			assertEquals("Expected " + i + " item to be equal", str[i],
-					unparsed[i]);
-		}
+		assertArrayEquals(str, unparsed);
 
 		// Do round Robin
 		StringBuilder unparsedBuilt = new StringBuilder();
@@ -163,12 +143,8 @@ public abstract class AbstractKitTokenTestCase<T extends Loadable> extends TestC
 		String[] sUnparsed = getToken()
 				.unparse(secondaryContext, secondaryProf);
 		assertEquals(unparsed.length, sUnparsed.length);
+		assertArrayEquals(sUnparsed, unparsed);
 
-		for (int i = 0; i < unparsed.length; i++)
-		{
-			assertEquals("Expected " + i + " item to be equal", unparsed[i],
-					sUnparsed[i]);
-		}
 		assertCleanConstruction();
 		assertTrue(secondaryContext.getReferenceContext().validate(null));
 		assertTrue(secondaryContext.getReferenceContext().resolveReferences(null));
@@ -187,7 +163,7 @@ public abstract class AbstractKitTokenTestCase<T extends Loadable> extends TestC
 		}
 		else
 		{
-			pr.addMessagesToLog();
+			pr.addMessagesToLog(TestURI.getURI());
 			primaryContext.rollback();
 			Logging.rewindParseMessages();
 			Logging.replayParsedMessages();
@@ -229,7 +205,7 @@ public abstract class AbstractKitTokenTestCase<T extends Loadable> extends TestC
 	}
 	
 	@Test
-	public void testInvalidEmpty() throws PersistenceLayerException
+	void testInvalidEmpty()
 	{
 		assertFalse(parse(""));
 	}
@@ -244,5 +220,14 @@ public abstract class AbstractKitTokenTestCase<T extends Loadable> extends TestC
 	{
 		assertTrue(primaryContext.getReferenceContext().validate(null));
 		assertTrue(primaryContext.getReferenceContext().resolveReferences(null));
+	}
+
+	protected <C extends Categorized<C>> void constructCategorized(LoadContext context,
+	                                                               Category<C> cat,
+	                                                               String name)
+	{
+		C obj = cat.newInstance();
+		obj.setName(name);
+		context.getReferenceContext().importObject(obj);
 	}
 }
